--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -312,9 +312,9 @@
 
 > 釋：照黨團協商條文通過。
 
-* 94 以犯第九十一條第一項、第二項、第九十一條之一、第九十二條或第九十三條之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣三十萬元以上三百萬元以下罰金。以犯第九十一條第三項之罪為常業者，處一年以上七年以下有期徒刑，得併科新臺幣八十萬元以上八百萬元以下罰金。
+* 94 （刪除）
 
-> 釋：一、配合修正條文第九十一條之一侵害散布權之處罰，於第一項增定為本條常業犯加重處罰之類型之一，並調整罰金刑數額，以有效遏阻侵害。二、意圖銷售或出租，以重製於光碟之方法，犯侵害重製權罪之常業犯，因此類犯罪行為涉有非法暴利，已有朝向大規模之組織犯罪型態發展之趨勢，非但使合法產業失去存空間，更嚴重破壞市場經濟秩序，侵損國家產業競爭力與敗壞國民道德風氣，造成國家社會整體的損害，宜加重處罰，提高罰金刑之數額，以期有效遏止侵害，爰增訂第二項。
+> 釋：一、本條刪除。二、配合刑法已刪除所有常業犯之規定，本條爰予刪除。
 
 * 95 違反第一百十二條規定者，處一年以下有期徒刑、拘役或科或併科新臺幣二萬元以上二十五萬元以下罰金。
 
@@ -332,27 +332,29 @@
 
 * 97 （刪除）
 
-* 98 犯第九十一條至第九十六條之一之罪，供犯罪所用或因犯罪所得之物，得沒收之。但犯第九十一條第三項及第九十一條之一第三項之罪者，其得沒收之物不以屬於犯人者為限。
+* 98 犯第九十一條至第九十三條、第九十五條至第九十六條之一之罪，供犯罪所用或因犯罪所得之物，得沒收之。但犯第九十一條第三項及第九十一條之一第三項之罪者，其得沒收之物，不以屬於犯人者為限。
 
-> 釋：一、本條為八十一年本法明訂之條文，八十七年修法時，各界以刑法總則已有相同條文之規定，咸認本法無重複規定之必要，而予刪除。鑒於恢復本條文，有宣示性之效果，有助於查緝著作權侵害犯罪，爰予回復增訂。二、又犯第九十一條第三項及第九十一條之一第三項之罪者，對著作權侵害尤大，爰參考光碟管理條例第十五條第三項及第十七條第三項規定，於但書特別規定，其供犯罪所用或因犯罪所得之物，不問屬於犯人與否，均得沒收之。
+> 釋：配合第九十四條之刪除，爰修正相關條次。
 
 * 98.1 犯第九十一條第三項或第九十一條之一第三項之罪，其行為人逃逸而無從確認者，供犯罪所用或因犯罪所得之物，司法警察機關得逕為沒入。前項沒入之物，除沒入款項繳交國庫外，銷燬之。其銷燬或沒入款項之處理程序，準用社會秩序維護法相關規定辦理。
 
 > 釋：一、本條新增。二、按實務上常見司法警察機關於取締著作權侵害犯罪行為時，行為人逃逸而無從確認，致所查獲供犯罪所用或因犯罪所得之物，無從隨同犯罪案件移送，僅得以無主物處理，經公告一段期間無人認領後始歸入國庫，其程序曠日費時，徒增社會成本，爰參考社會秩序維護法第二十三條、第四十三條及警械使用條例第十四條第一項規定，得由司法警察機關逕為沒入。三、又因犯罪所得之物經沒入後，如為金錢，應予繳交國庫，如為金錢以外之物（例如盜版光碟），為避免再流入市場，造成著作權人損害，應予銷燬，爰配合明定第二項。
 
-* 99 犯第九十一條至第九十五條之罪者，因被害人或其他有告訴權人之聲請，得令將判決書全部或一部登報，其費用由被告負擔。
+* 99 犯第九十一條至第九十三條、第九十五條之罪者，因被害人或其他有告訴權人之聲請，得令將判決書全部或一部登報，其費用由被告負擔。
 
-* 100 本章之罪，須告訴乃論。但犯第九十一條第三項、第九十一條之一第三項及第九十四條之罪，不在此限。
+> 釋：配合第九十四條之刪除，爰修正相關條次。
 
-> 釋：一、由於科技之進步，盜版品之製造已從單一或少量演進成為在極短的時間裡即可製造數以千萬計之產品。盜錄、盜拷及散布盜版光碟之犯罪行為，成本低微，攫取非法暴利，破壞產銷秩序及經濟秩序，擾亂交易安全，更危及著作權相關產業。二、此類犯罪行為已從往昔單純侵害個人法益之性質轉化為損害國家、社會法益的性質，不宜繼續列為告訴乃論之範圍，而應由國家主動追訴。三、爰將犯修正條文第九十一條第三項及第九十一條之一第三項所定兩種較重大之著作權侵害行為納入非告訴乃論之範圍，以期有效遏止侵權犯罪。四、按修正條文第九十五條業已刪除第一款之規定，爰配合修正。
+* 100 本章之罪，須告訴乃論。但犯第九十一條第三項及第九十一條之一第三項之罪，不在此限。
 
-* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十六條之一之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
+> 釋：配合第九十四條之刪除，爰修正相關條次。
 
-> 釋：第一項修正。配合修正條文第九十六條之一對於違反科技保護措施及著作權利管理電子資訊保護之處罰，於本條增列為兩罰及告訴不可分適用對象。
+* 101 法人之代表人、法人或自然人之代理人、受雇人或其他從業人員，因執行業務，犯第九十一條至第九十三條、第九十五條至第九十六條之一之罪者，除依各該條規定處罰其行為人外，對該法人或自然人亦科各該條之罰金。對前項行為人、法人或自然人之一方告訴或撤回告訴者，其效力及於他方。
 
-* 102 未經認許之外國法人，對於第九十一條至第九十六條之一之罪，得為告訴或提起自訴。
+> 釋：一、配合第九十四條之刪除，爰修正第一項相關條次。二、第二項未修正。
 
-> 釋：配合修正條文第九十六條之一對於違反科技保護措施及著作權利管理電子資訊保護之處罰，將之納入本條未經認許之外國法人得為告訴或提起自訴之範圍，爰予修正。
+* 102 未經認許之外國法人，對於第九十一條至第九十三條、第九十五條至第九十六條之一之罪，得為告訴或提起自訴。
+
+> 釋：配合第九十四條之刪除，爰修正相關條次。
 
 * 103 司法警察官或司法警察對侵害他人之著作權或製版權，經告訴、告發者，得依法扣押其侵害物，並移送偵辦。
 
@@ -408,7 +410,7 @@
 
 * 116 （刪除）
 
-* 117 本法除中華民國八十七年一月二十一日修正公布之第一百零六條之一至第一百零六條之三規定，自世界貿易組織協定在中華民國管轄區域內生效日起施行外，自公布日施行。
+* 117 本法除中華民國八十七年一月二十一日修正公布之第一百零六條之一至第一百零六條之三規定，自世界貿易組織協定在中華民國管轄區域內生效日起施行，及中華民國九十五年五月五日修正之條文，自中華民國九十五年七月一日施行外，自公布日施行。
 
-> 釋：為配合本次修正條文擬「自公布日施行」，爰修正本條。
+> 釋：按刑法修正條文將於九十五年七月一日施行，爰配合修正相關條文之施行日期。
 
