--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -64,9 +64,9 @@
 
 > 釋：一、本條原僅針對起訴後被告之辯護人而設。茲因起訴前亦許被告或犯罪嫌疑人選任辯護人，本條自應予以配合修正。二、辯護人之選任，固應以書面為之，惟本條第二項規定之「委任狀」，易與司法狀紙相混，尤其犯罪嫌疑人於司法警察官或司法警察調查中欲選任辯護人時，如必須前往法院購用司法狀紙，顯有不便，自宜參照本法第二百四十二條第一項用語，改訂為「委任書狀」，以資概括。爰將本條第一項修正為：「選任辯護人，應提出委任書狀」。三、本條修正第二項，規定起訴前辯護人之選任，在檢察官偵查中被告或其家屬等所具之委任書狀，應提出於檢察官，在司法警察官或司法警察調查中犯罪嫌疑人或其家屬等所具之委任書狀，應提出於司法警察官。至於起訴後辯護人之選任，仍照現行作法，應於每審級提出於法院。
 
-* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審案件或被告因智能障礙無法為完全之陳述，於審判中未經選任辯護人者，審判長應指定公設辯護人或律師為其辯護；其他審判案件，低收入戶被告未選任辯護人而聲請指定，或審判長認有必要者，亦同。前項案件選任辯護人於審判期日無正當理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。
+* 31 最輕本刑為三年以上有期徒刑或高等法院管轄第一審案件或被告因智能障礙無法為完全之陳述，於審判中未經選任辯護人者，審判長應指定公設辯護人或律師為其辯護；其他審判案件，低收入戶被告未選任辯護人而聲請指定，或審判長認有必要者，亦同。前項案件選任辯護人於審判期日無正當理由而不到庭者，審判長得指定公設辯護人。被告有數人者，得指定一人辯護。但各被告之利害相反者，不在此限。指定辯護人後，經選任律師為辯護人者，得將指定之辯護人撤銷。被告因智能障礙無法為完全之陳述，於偵查中未經選任辯護人者，檢察官應指定律師為其辯護。第二項至第四項之規定於前項之指定，準用之。
 
-> 釋：一、現行之刑事訴訟制度由「職權主義」調整為「改良式當事人進行主義」，由於被告無論在法律知識層面，或在接受調查、被追訴的心理層面，相較於具有法律專業知識、熟悉訴訟程序之檢察官均處於較為弱勢的地位。因此，訴訟程序之進行非僅僅強調當事人形式上的對等，尚須有強而有力的辯護人協助被告，以確實保護其法律上利益，監督並促成刑事訴訟正當程序之實現。對於符合社會救助法之低收入戶被告，因無資力而無法自行選任辯護人者，為避免因貧富的差距而導致司法差別待遇，自應為其謀求適當之救濟措施。爰參考日本刑事訴訟法第三十六條、第三十七條國選辯護人制度之精神及我國現行公設辯護人條例第二條、律師法第二十條第一項、第二十二條之相關規定，修正本條第一項，使強制辯護案件得指定公設辯護人或律師為被告辯護，採行雙軌制，並增訂低收入被告亦得向法院聲請指定公設辯護人或律師為其辯護之規定。二、本條法院得指定辯護之律師來源，得由中華民國律師公會全國聯合會另行訂定律師輪值辦法，並將輪值律師之名冊函送司法院供法院遇案指定。
+> 釋：一、 被告因智能障礙未經選任辯護人者，在審判中屬於強制辯護案件，審判長應指定公設辯護人或律師為其辯護。其在檢察官偵查中，如無辯護人予以協助，顯不足以保障權利。應將本條關於智能障礙者強制辯護之規定擴及於檢察官偵查階段。爰增定第五項，使因智能障礙無法為完全之陳述之被告於檢察官偵查時亦得有指定辯護規定之適用。二、 偵查之指定辯護，亦有第二項至第四項之情形，爰增定第六項明定其準用規定。
 
 * 32 被告有數辯護人者，送達文書應分別為之。
 
