--- a/行政-內政/公職人員選舉罷免法.md
+++ b/行政-內政/公職人員選舉罷免法.md
@@ -42,9 +42,9 @@
 
 > 釋：按地方制度法第二條、第十四條規定，直轄市、縣（市）、鄉（鎮、市）為地方自治團體，具公法人地位，依法辦理自治事項；財政收支劃分法第三十六條規定，各級政府行政區域內人民行使政權之費用，由各該政府負擔之，是依前開規定辦理直轄市、縣（市）公職人員選舉、罷免之實施事項，為各該地方政府之自治事項，其支出由各該級政府編列，爰將本法施行細則第六條規定酌予修正後，提升至本法規範。
 
-* 14 中華民國國民，年滿二十歲，無左列情事之一者，有選舉權。一、褫奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。前項第一款情形，如係戒嚴時期依懲治叛亂條例判決者，不在此限。
+* 14 中華民國國民，年滿二十歲，除受禁治產宣告尚未撤銷者外，有選舉權。
 
-> 釋：增列第二項但書。
+> 釋：一、九十四年二月二日修正公布之刑法，業已刪除原第三十六條第三款有關褫奪公權者，褫奪選舉、罷免、創制、複決四權資格之規定，並自九十五年七月一日起施行，爰配合將第一項第一款規定予以刪除，並酌作文字修正。二、配合第一項之修正，刪除第二項規定。
 
 * 15 有選舉權人在各該選舉區繼續居住四個月以上者，為公職人員選舉各該選舉區之選舉人。前項之居住期間，在其行政區域劃分選舉區者，仍以行政區域為範圍計算之。但於選舉公告發布後，遷入各該選舉區者，無選舉投票權。
 
@@ -532,5 +532,7 @@
 
 > 釋：修正本法施行細則由中央選舉委員會擬訂，貫徹選舉機關適用選罷法公平、公正、公開之特性，且符合行政機關適用法律，權責一致之精神。
 
-* 113 本法自公布日施行。
+* 113 本法自公布日施行。本法中華民國九十五年五月五日修正之條文，自中華民國九十五年七月一日施行。
+
+> 釋：一、原條文未修正，列為第一項。二、配合刑法修正條文自九十五年七月一日施行，增列第二項，規定修正條文之施行日期。
 
