--- a/行政-財政及金融/證券交易法.md
+++ b/行政-財政及金融/證券交易法.md
@@ -576,9 +576,9 @@
 
 * 170 證券商同業公會及證券交易所應於章程或規則內，訂明有關仲裁之事項。但不得牴觸本法及商務仲裁條例。
 
-* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項或第一百五十七條之一第一項之規定者。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害者。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。犯第一項或第二項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項或第二項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。
+* 171 有下列情事之一者，處三年以上十年以下有期徒刑，得併科新臺幣一千萬元以上二億元以下罰金：一、違反第二十條第一項、第二項、第一百五十五條第一項、第二項或第一百五十七條之一第一項之規定者。二、已依本法發行有價證券公司之董事、監察人、經理人或受僱人，以直接或間接方式，使公司為不利益之交易，且不合營業常規，致公司遭受重大損害者。三、已依本法發行有價證券公司之董事、監察人或經理人，意圖為自己或第三人之利益，而為違背其職務之行為或侵占公司資產。犯前項之罪，其犯罪所得金額達新臺幣一億元以上者，處七年以上有期徒刑，得併科新臺幣二千五百萬元以上五億元以下罰金。犯第一項或第二項之罪，於犯罪後自首，如有犯罪所得並自動繳交全部所得財物者，減輕或免除其刑；並因而查獲其他正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白，如有犯罪所得並自動繳交全部所得財物者，減輕其刑；並因而查獲其他正犯或共犯者，減輕其刑至二分之一。犯第一項或第二項之罪，其犯罪所得利益超過罰金最高額時，得於所得利益之範圍內加重罰金；如損及證券市場穩定者，加重其刑至二分之一。犯第一項或第二項之罪者，其因犯罪所得財物或財產上利益，除應發還被害人、第三人或應負損害賠償金額者外，以屬於犯人者為限，沒收之。如全部或一部不能沒收時，追徵其價額或以其財產抵償之。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、刑法第四章章名已由「共犯」修正為「正犯與共犯」，爰修正第三項及第四項。二、第一項、第二項、第五項及第六項未修正。
 
 * 172 證券交易所之董事、監察人或受僱人，對於職務上之行為，要求期約或收受不正利益者，處五年以下有期徒刑、拘役或科或併科新臺幣二百四十萬元以下罰金。前項人員對於違背職務之行為，要求期約或收受不正利益者，處七年以下有期徒刑，得併科新臺幣三百萬元以下罰金。犯前二項之罪者，所收受之財物沒收之；如全部或一部不能沒收時，追徵其價額。
 
@@ -648,7 +648,7 @@
 
 > 釋：配合行政院金融監督管理委員會於九十三年七月一日成立，業依行政院金融監督管理委員會組織法第二條、第四條及行政程序法第十一條第二項將主管機關由財政部證券暨期貨管理委員會變更為行政院金融監督管理委員會，爰修正本條文。
 
-* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條，自九十年一月十五日施行；中華民國九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三，自九十六年一月一日施行外，自公布日施行。
+* 183 本法施行日期，除中華民國八十九年七月十九日修正公布之第五十四條、第九十五條及第一百二十八條自九十年一月十五日施行，中華民國九十四年十二月二十日修正之第十四條之二至第十四條之五、第二十六條之三自九十六年一月一日施行，中華民國九十五年五月五日修正之條文自九十五年七月一日施行外，自公布日施行。
 
-> 釋：由於第十四條之二至第十四條之五有關獨立董事及審計委員會之設置，涉及公司組織架構之調整，第二十六條之三規範董事最低席次及董事、監察人間應超過一定比例或人數其彼此間不得具有親屬等關係，為避免新制度對公司現行運作造成重大衝擊，宜有適當之緩衝期間，爰修正本條，明定相關修正條文之實施日期。
+> 釋：照黨團協商條文通過。
 
