總統副總統選舉罷免法 2006.5.5

--- a/總統/總統副總統選舉罷免法.md
+++ b/總統/總統副總統選舉罷免法.md
@@ -38,9 +38,9 @@
 
 > 釋：本條未修正。
 
-* 11 中華民國自由地區人民，年滿二十歲，無下列情事之一者，有選舉權：一、禠奪公權尚未復權者。二、受禁治產宣告尚未撤銷者。前項第一款情形，如係戒嚴時期依懲治叛亂條例判決者，不在此限。
+* 11 中華民國自由地區人民，年滿二十歲，除受禁治產宣告尚未撤銷者外，有選舉權。
 
-> 釋：一、第一項序文之「左列」修正為「下列」。二、其餘未修正。
+> 釋：一、九十四年二月二日修正公布之刑法，業將第三十六條第三款有關褫奪公權之範圍，刪除有關選舉、罷免、創制、複決等人民參政權之行使，並自九十五年七月一日起施行，爰配合將第一項第一款規定予以刪除，並酌作文字修正。二、配合第一項之修正，刪除第二項規定。
 
 * 12 前條有選舉權人具下列條件之一者，為選舉人：一、現在中華民國自由地區繼續居住六個月以上者。二、曾在中華民國自由地區繼續居住六個月以上，現在國外，持有效中華民國護照，並在規定期間內向其最後遷出國外時之原戶籍地戶政機關辦理選舉人登記者。前項第二款在國外之中華民國自由地區人民申請返國行使選舉權登記查核辦法，由中央選舉委員會會同外交部、僑務委員會另定之。
 
@@ -338,9 +338,9 @@
 
 > 釋：一、本條為原條文第七十七條移列。二、序文之「左列」修正為「下列」。三、其餘未修正。
 
-* 86 對於有投票權之人，行求期約或交付賄賂或其他不正利益，而約其不行使投票權或為一定之行使者，處三年以上十年以下有期徒刑，得併科新臺幣一百萬元以上一千萬元以下罰金。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲候選人為共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲候選人為共犯者，減輕或免除其刑。
+* 86 對於有投票權之人，行求期約或交付賄賂或其他不正利益，而約其不行使投票權或為一定之行使者，處三年以上十年以下有期徒刑，得併科新臺幣一百萬元以上一千萬元以下罰金。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲候選人為正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲候選人為正犯或共犯者，減輕或免除其刑。
 
-> 釋：一、本條為原條文第七十八條移列。二、為淨化選風，爰將第一項後段之刑度及罰金酌予提高，並酌作標點修正。三、第三項酌作標點修正。四、第二項、第四項及第五項未修正。
+> 釋：一、第一項至第三項未修正。二、配合刑法第四章章名「共犯」修正為「正犯與共犯」，第四項、第五項爰增列「正犯或」等字。
 
 * 87 有下列行為之一者，處一年以上七年以下有期徒刑，併科新臺幣一百萬元以上一千萬元以下罰金：一、對於團體或機構，假借捐助名義，行求期約或交付財物或其他不正利益，使其團體或機構之構成員，不行使投票權或為一定之行使者。二、對連署人行求期約或交付賄賂或其他不正利益，使其為特定被連署人連署或不為連署者。三、對罷免案提議人或同意人行求期約或交付賄賂或其他不正利益，使其不為提議或同意，或為一定之提議或同意者。預備犯前項之罪者，處一年以下有期徒刑。預備或用以行求期約或交付之賄賂，不問屬於犯人與否，沒收之。
 
@@ -350,9 +350,9 @@
 
 > 釋：一、本條為原條文第八十條移列。二、第一項酌予提高刑度及罰金。三、第二項未修正。
 
-* 89 政黨辦理總統、副總統候選人黨內提名，自公告其提名作業之日起，於提名作業期間，對於黨內候選人有第八十四條第一項、第二項之行為者，依第八十四條第一項、第二項規定處斷；對於有投票資格之人，有第八十六條第一項之行為者，依第八十六條第一項規定處斷。預備犯前項之罪者，處一年以下有期徒刑。犯前二項之罪者，預備用以行求期約、交付或收受之賄賂，不問屬於犯人與否，沒收之；所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲共犯者，免除其刑。意圖漁利，包攬第一項之事務者，依前條之規定處斷。前項之未遂犯罰之。第一百條規定，於政黨辦理總統、副總統候選人黨內提名時，準用之。政黨依第一項規定辦理黨內提名作業，應公告其提名作業相關事宜，並載明起止時間、作業流程、黨內候選人及有投票資格之人之認定等事項；各政黨於提名作業公告後，應於五日內報請內政部備查。
+* 89 政黨辦理總統、副總統候選人黨內提名，自公告其提名作業之日起，於提名作業期間，對於黨內候選人有第八十四條第一項、第二項之行為者，依第八十四條第一項、第二項規定處斷；對於有投票資格之人，有第八十六條第一項之行為者，依第八十六條第一項規定處斷。預備犯前項之罪者，處一年以下有期徒刑。犯前二項之罪者，預備用以行求期約、交付或收受之賄賂，不問屬於犯人與否，沒收之；所收受之賄賂沒收之；如全部或一部不能沒收時，追徵其價額。犯第一項或第二項之罪，於犯罪後六個月內自首者，減輕或免除其刑；因而查獲正犯或共犯者，免除其刑。犯第一項或第二項之罪，在偵查中自白者，減輕其刑；因而查獲正犯或共犯者，免除其刑。意圖漁利，包攬第一項之事務者，依前條之規定處斷。前項之未遂犯罰之。第一百條規定，於政黨辦理總統、副總統候選人黨內提名時，準用之。政黨依第一項規定辦理黨內提名作業，應公告其提名作業相關事宜，並載明起止時間、作業流程、黨內候選人及有投票資格之人之認定等事項；各政黨於提名作業公告後，應於五日內報請內政部備查。
 
-> 釋：一、本條新增。二、政黨辦理總統、副總統候選人黨內提名作業，與推薦候選人參加總統、副總統選舉有關，如以所謂「搓圓仔湯」或賄選方式，獲得政黨提名，將嚴重影響選舉結果，為資周延，並維護選舉公平性，有必要將此不法行為，納入本法加以處罰，爰為第一項至第七項之規定。三、為加強政黨辦理提名作業期間檢察官之犯罪偵查，有效遏阻賄選，爰增列第八項之規定。四、第九項明定各政黨應公告提名作業相關事宜及應載明事項，其提名作業公告後，並應報請內政部備查。
+> 釋：一、第一項至第三項、第六項至第九項未修正。二、配合刑法第四章章名「共犯」修正為「正犯與共犯」，爰將第四項、第五項「共犯」修正為「正犯或共犯」。
 
 * 90 意圖使候選人當選或不當選，以文字、圖畫、錄音、錄影、演講或他法，散布謠言或傳播不實之事，足以生損害於公眾或他人者，處五年以下有期徒刑。
 
@@ -468,5 +468,5 @@
 
 * 117 本法自公布日施行。
 
-> 釋：本條為原條文第一百零七條移列，內容未修正。
+> 釋：一、原條文未修正，列為第一項。二、配合刑法修正條文自九十五年七月一日施行，增列第二項，規定修正條文之施行日期。
 
