軍事審判法 2006.5.19

--- a/行政-國防/軍事審判法.md
+++ b/行政-國防/軍事審判法.md
@@ -314,9 +314,9 @@
 
 > 釋：一、條次變更，本條為原條文第八十二條移列。二、按修正條文第六十九條已採納偵查中選任辯護人制度，爰參照刑事訴訟法第三十三條，明定辯護人「於審判中」始得檢閱卷證及抄錄或攝影。另為保障國家安全，增訂於國防機密案件，得限制攝影。
 
-* 80 辯護人得接見犯罪嫌疑人及羈押之被告，並互通書信。但有事實足認其有湮滅、偽造、變造證據或勾串共犯或證人之虞者，得限制之。
+* 80 辯護人得接見犯罪嫌疑人及羈押之被告，並互通書信。但有事實足認其有湮滅、偽造、變造證據或勾串其他正犯、共犯或證人之虞者，得限制之。
 
-> 釋：一、條次變更，本條為原條文第八十三條移列。二、修正條文第六十九條已採納偵查中選任辯護人制度，爰參照刑事訴訟法第三十四條規定，修正辯護人得接見偵審中之犯罪嫌疑人或被告並互通書信及限制事項。
+> 釋：刑法第四章章名已由「共犯」修正為「正犯與共犯」，爰將本條之「共犯」修正為「其他正犯、共犯」。
 
 * 81 辯護人對於承辦案件，應提出辯護書。
 
@@ -350,9 +350,9 @@
 
 > 釋：一、條次變更，本條為原條文第九十七條移列。二、第一項至第三項均未修正。三、第四項因軍法機關改採地區制。其傳票經軍事檢察官、審判長（官）簽名後，即可對外行文，爰將「以軍事審判機關長官之名義行之」等字刪除，並作文字修正。
 
-* 89 被告犯罪嫌疑重大，而有下列情形之一者，得不經傳喚逕行拘提：一、無一定之住所或居所者。二、逃亡或有事實足認為有逃亡之虞者。三、有事實足認為有湮滅、偽造、變造證據或勾串共犯或證人之虞者。四、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪者。
+* 89 被告犯罪嫌疑重大，而有下列情形之一者，得不經傳喚逕行拘提：一、無一定之住所或居所者。二、逃亡或有事實足認為有逃亡之虞者。三、有事實足認為有湮滅、偽造、變造證據或勾串其他正犯、共犯或證人之虞者。四、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪者。
 
-> 釋：一、條次變更，本條為原條文第九十八條移列。二、原條文所定「犯罪嫌疑重大」及「為保持軍紀必要時」之逕行拘提要件，規範均欠具體，爰參照刑事訴訟法第七十六條規定，修正本條序文，並增訂第一款、第二款、第三款、第四款逕行拘提要件，以期明確。
+> 釋：刑法第四章章名已由「共犯」修正為「正犯與共犯」，爰將本條第三款之「共犯」修正為「其他正犯、共犯」。
 
 * 90 拘提被告，應用拘票，並記載下列事項：一、被告之姓名、性別、軍事機關、部隊或學校之名稱或番號及其駐在地或住居所。二、案由。三、拘提之理由。四、應解送之處所。第八十八條第三項、第四項之規定，於拘票準用之。拘提由執法官兵、軍法警察或軍法警察官執行。
 
@@ -402,13 +402,13 @@
 
 > 釋：一、條次變更，本條為原條文第一百零八條移列。二、第一項因戶籍法已將戶籍登記「本籍」項目刪除，為識別被告人別之需要，爰將「籍貫」配合修正為「出生地」。三、第二項未修正。
 
-* 102 被告經軍事審判官訊問後，認為犯罪嫌疑重大，而有下列情形之一，非予羈押，顯難進行追訴、審判或執行者，得羈押之：一、逃亡或有事實足認有逃亡之虞者。二、有事實足認為有湮滅、偽造、變造證據或勾串共犯或證人之虞者。三、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪者。四、有事實足認非予羈押即有妨害軍事安全之虞者。軍事審判官為前項之訊問時，軍事檢察官得到場陳述聲請羈押之理由及提出必要之證據。第一項各款所依據之事實，應告知被告及其辯護人，並記載於筆錄。
+* 102 被告經軍事審判官訊問後，認為犯罪嫌疑重大，而有下列情形之一，非予羈押，顯難進行追訴、審判或執行者，得羈押之：一、逃亡或有事實足認有逃亡之虞者。二、有事實足認為有湮滅、偽造、變造證據或勾串其他正犯、共犯或證人之虞者。三、所犯為死刑、無期徒刑或最輕本刑為五年以上有期徒刑之罪者。四、有事實足認非予羈押即有妨害軍事安全之虞者。軍事審判官為前項之訊問時，軍事檢察官得到場陳述聲請羈押之理由及提出必要之證據。第一項各款所依據之事實，應告知被告及其辯護人，並記載於筆錄。
 
-> 釋：一、本條新增。二、配合司法院大法官議決第三九二號解釋，規定僅軍事審判官有羈押權，復按羈押處分剝奪人身自由，嚴重影響被告權益，須審慎為之，原條文對於羈押要件及羈押理由全盤準用刑事訴訟法之規定，尚有未妥，爰參照該法第一百零一條第一項，並兼顧軍隊特性之實需，增訂為第一項。三、參照前開刑事訴訟法同條第二項，明定軍事檢察官於軍事審判官為決定羈押之訊問時，得到場陳述聲請羈押之理由及提出必要之證據，增訂為第二項。四、第一項各款所依據之事實，應告知被告及其辯護人，並記明於筆錄，使其有就該事實辯明之機會，爰參照前開刑事訴訟法同條第三項，增列為第三項。
+> 釋：一、刑法第四章章名已由「共犯」修正為「正犯與共犯」，爰將第一項第二款之「共犯」修正為「其他正犯、共犯」。二、第二項及第三項未修正。
 
-* 103 被告經軍事審判官訊問後，認為犯下列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十四條之強制猥褻罪、第二百二十七條與幼年男女性交或猥褻罪。但未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百二十一條、第三百二十二條之竊盜罪。五、刑法第三百二十五條至第三百二十七條之搶奪罪。六、刑法第三百二十九條之準強盜罪。七、刑法第三百四十條之常業詐欺罪。八、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
+* 103 被告經軍事審判官訊問後，認為犯下列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十四條之強制猥褻罪、第二百二十七條與幼年男女性交或猥褻罪。但未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百二十條、第三百二十一條之竊盜罪。五、刑法第三百二十五條、第三百二十六條之搶奪罪。六、刑法第三百二十九條之準強盜罪。七、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
 
-> 釋：一、本條新增。二、參照刑事訴訟法第一百零一條之一，增訂預防性羈押規定，並配合本法第一條第一項之審判權範圍，將刑事訴訟法上述條文第一款之刑法第一百七十五條第二項之放火罪、第二款之刑法第二百七十七條第一項之傷害罪，及第四款之刑法第三百零四條之強制罪、第三百零五條之恐嚇危害安全罪等不歸軍事審判之罪名排除，並調整款次。三、因應刑法第二百二十七條之修正，將第一項第二款「姦淫」改為「與幼年男女性交」。四、第一項第四款之刑法竊盜罪，包括仍屬輕罪之陸海空軍刑法第八十五條前段盜取財物罪；至於陸海空軍刑法第八十三條之搶奪財物罪排斥第五款之刑法搶奪罪部分，於配合修正陸海空軍刑法前，依前條之重罪羈押規定處理。
+> 釋：一、因應九十四年二月二日修正公布，九十五年七月一日施行之刑法已刪除常業犯之規定，回歸普通犯罪類型之一罪一罰，本條第一項第四款之刑法第三百二十二條常業竊盜罪、第五款之刑法第三百二十七條常業搶奪罪，已失依據，自應配合刪除。爰於第一項第四款刪除常業竊盜罪名之同時，增列刑法第三百二十條之普通竊盜罪，以發揮預防性羈押之功能。二、現役軍人犯刑法第三百四十條之常業詐欺罪，已不在陸海空軍刑法規範範圍，並無本法之適用，爰刪除第一項第七款。三、第二項未修正。
 
 * 104 羈押被告，偵查中不得逾二月，審判中不得逾三月。但有繼續羈押之必要者，得於期間未滿前，經軍事法院依第一百零二條或第一百零三條之規定訊問被告後，以裁定延長之。但偵查中延長羈押期間，應由軍事檢察官附具體理由，至遲於期間屆滿之五日前聲請軍事法院裁定。前項裁定，除當庭宣示者外，於期間未滿前以正本送達於被告者，發生延長羈押之效力。羈押期滿，延長羈押之裁定未經合法送達者，視為撤銷羈押。審判中之羈押期間，自卷宗及證物送交軍事法院或最高法院、高等法院之日起算。起訴或裁判後送交前之羈押期間算入偵查中或原審軍事法院之羈押期間。羈押期間自簽發押票之日起算。但羈押前之逮捕、拘提期間，以一日折算裁判確定前之羈押日數一日。延長羈押期間，偵查中不得逾二月，以延長一次為限。審判中每次不得逾二月，如所犯最重本刑為十年以下有期徒刑以下之刑者，初審及第二審以三次為限，第三審以一次為限。案件經發回者，其延長羈押期間之次數，應更新計算。羈押期間已滿未經起訴或裁判者，視為撤銷羈押，軍事檢察官或軍事法院應將被告釋放；由軍事檢察官釋放被告者，並應即時通知軍事法院。
 
@@ -962,9 +962,9 @@
 
 > 釋：一、本條新增。二、照黨團協商條文通過。
 
-* 238 本法自中華民國八十八年十月三日施行。本法修正條文自公布日施行。
+* 238 本法自中華民國八十八年十月三日施行。本法修正條文，除中華民國九十五年五月十九日修正之條文自中華民國九十五年七月一日施行者外，自公布日施行。
 
-> 釋：一、原條文未修正，列為第一項。二、增列第二項，有關本次修正條文施行日期之規定。
+> 釋：配合刑法修正條文自九十五年七月一日施行，酌修本次修正條文施行日期。
 
 * 239 有左列情形之一者，其判決當然為違背法令：一、軍事法庭之組織不合法者。二、依法律或裁判應迴避之審判官參與審判者。三、軍事審判機關所認管轄之有無係不當者。四、軍事審判機關受理案件或不受理案件係不當者。五、除有特別規定外，被告未於審判期日到庭而逕行審判者。六、依本法應用辯護人之案件，或已經指定辯護人之案件，辯護人未經到庭辯護而逕行審判者。七、除有特別規定外，未經軍事檢察官到庭陳述而為審判者。八、依本法應停止或更新審判而未經停止或更新者。九、依本法應於審判期日調查之證據未予調查者。十、未與被告以最後陳述之機會者。十一、除本法有特別規定外，已受請求之事項未予判決，或未受請求之事項予以判決者。十二、未經參與審理之審判官參與判決者。十三、判決不載理由或所載理由矛盾者。十四、判決理由對於被告有利之陳述或辯護意旨不予採納而未經記載者。
 
