刑事訴訟法 2006.5.23

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -270,9 +270,9 @@
 
 > 釋：羈押處分，剝奪人民身體之自由，嚴重影響人民權益，現行條文規定之羈押要件及羈押理由，尚嫌簡略，爰就羈押之要件及羈押之理由設更明確且嚴謹之規定，用符法制。又為使被告於受訊問時，有辯護人到場，俾能對被告為適當之保障，增訂第二項明定應告知被告得選任辯護人到場，以資明確；另規定第一項所依據之事實，應告知被告及其辯護人，並記載於筆錄，以資周延。
 
-* 101.1 被告經法官訊問後，認為犯左列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十一條之強制性交罪、第二百二十四條之強制猥褻罪、第二百二十四條之一之加重強制猥褻罪、第二百二十五條之乘機性交猥褻罪、第二百二十七條之與幼年男女性交或猥褻罪、第二百七十七條第一項之傷害罪。但其須告訴乃論，而未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條之強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十一條、第三百二十二條之竊盜罪。六、刑法第三百二十五條至第三百二十七條之搶奪罪。七、刑法第三百四十條之常業詐欺罪。八、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
+* 101.1 被告經法官訊問後，認為犯下列各款之罪，其嫌疑重大，有事實足認為有反覆實施同一犯罪之虞，而有羈押之必要者，得羈押之：一、刑法第一百七十四條第一項、第二項、第四項、第一百七十五條第一項、第二項之放火罪、第一百七十六條之準放火罪。二、刑法第二百二十一條之強制性交罪、第二百二十四條之強制猥褻罪、第二百二十四條之一之加重強制猥褻罪、第二百二十五條之乘機性交猥褻罪、第二百二十七條之與幼年男女性交或猥褻罪、第二百七十七條第一項之傷害罪。但其須告訴乃論，而未經告訴或其告訴已經撤回或已逾告訴期間者，不在此限。三、刑法第三百零二條之妨害自由罪。四、刑法第三百零四條之強制罪、第三百零五條之恐嚇危害安全罪。五、刑法第三百二十條、第三百二十一條之竊盜罪。六、刑法第三百二十五條、第三百二十六條之搶奪罪。七、刑法第三百三十九條、第三百三十九條之三之詐欺罪。八、刑法第三百四十六條之恐嚇取財罪。前條第二項、第三項之規定，於前項情形準用之。
 
-> 釋：一、強制性交罪更甚於強制猥褻罪，且再犯率高，有預防羈押之必要。二、修正第一項第二款，增列刑法之第二百二十一條之強制性交罪、第二百二十四條之一之加重強制猥褻罪及第二百二十五條之乘機性交猥褻罪。三、原條文第一項第七款刪除。
+> 釋：一、第一項序文「左列」一語，改為「下列」，以符法制用語。二、因應九十四年二月二日修正公布，九十五年七月一日施行之修正刑法已刪除常業犯之規定，第一項第五款之刑法第三百二十二條常業竊盜罪、第六款之刑法第三百二十七條常業搶奪罪及第七款之刑法第三百四十條常業詐欺罪，已失依據，自應配合刪除。另考量不正使用電腦詐欺罪犯，與詐欺慣犯同具高再犯率之犯罪特性，亦有以預防性羈押防止其反覆實施同一犯罪之必要，爰於第七款增列刑法第三百三十九條之三之不正使用電腦詐欺罪，以發揮預防性羈押之功能。三、第二項未修正。
 
 * 101.2 被告經法官訊問後，雖有第一百零一條第一項或第一百零一條之一第一項各款所定情形之一而無羈押之必要者，得逕命具保、責付或限制住居；其有第一百十四條各款所定情形之一者，非有不能具保、責付或限制住居之情形，不得羈押。
 
@@ -1196,7 +1196,9 @@
 
 * 300 前條之判決，得就起訴之犯罪事實，變更檢察官所引應適用之法條。
 
-* 301 不能證明被告犯罪或其行為不罰者，應諭知無罪之判決。因未滿十四歲或心神喪失而其行為不罰，認為有諭知保安處分之必要者，並應諭知其處分及期間。
+* 301 不能證明被告犯罪或其行為不罰者應諭知無罪之判決。依刑法第十八條第一項或第十九條第一項其行為不罰，認為有諭知保安處分之必要者，並應諭知其處分及期間。
+
+> 釋：一、第一項未修正。二、第二項之「心神喪失」，係有關刑事責任能力規定，爰配合刑法第十九條為刑事責任能力定義之修正，將有關「心神喪失」連同「未滿十四歲」規定，均改以逕引刑法條項為依據。三、至第二百九十四條第一項規定之「心神喪失 」，係指被告於審判時之精神狀態；第四百六十五條第一項、第四百六十七條 第一款規定之「心神喪失 」，則為受刑人於執行時之精神狀態，概念與第三百零一條第二項及第四百八十一條第二項所稱之「心神喪失」係指刑事責任而言之情形不同，毋庸一併修正。
 
 * 302 案件有左列情形之一者，應諭知免訴之判決：一、曾經判決確定者。二、時效已完成者。三、曾經大赦者。四、犯罪後之法律已廢止其刑罰者。
 
@@ -1654,7 +1656,9 @@
 
 * 469 受死刑、徒刑或拘役之諭知，而未經羈押者，檢察官於執行時，應傳喚之；傳喚不到者，應行拘提。前項受刑人，得依第七十六條第一款及第二款之規定，逕行拘提，及依第八十四條之規定通緝之。
 
-* 470 罰金、罰鍰、沒收、沒入及追徵之裁判，應依檢察官之命令執行之。但罰金、罰鍰於裁判宣示後，如經受裁判人同意而檢察官不在場者，得由推事當庭指揮執行。前項命令與民事執行名義有同一之效力。罰金、沒收及追徵，得就受刑人之遺產執行。
+* 470 罰金、罰鍰、沒收、沒入、追徵、追繳及抵償之裁判，應依檢察官之命令執行之。但罰金、罰鍰於裁判宣示後，如經受裁判人同意而檢察官不在場者，得由法官當庭指揮執行。前項命令與民事執行名義有同一之效力。罰金、沒收、追徵、追繳及抵償，得就受刑人之遺產執行。
+
+> 釋：一、配合修正刑法第三十四條增列追繳及抵償為從刑之規定，爰修正第一項、第三項，增列追繳及抵償之執行。二、配合法院組織法之用語，第一項但書所定「推事」一併修正為「法官」。三、第二項未修正。
 
 * 471 前條裁判之執行，準用執行民事裁判之規定。前項執行，檢察官於必要時，得囑託地方法院民事執行處為之。檢察官之囑託執行，免徵執行費。
 
@@ -1676,7 +1680,9 @@
 
 * 480 罰金易服勞役者，應與處徒刑或拘役之人犯，分別執行。第四百六十七條及第四百六十九條之規定，於易服勞役準用之。
 
-* 481 依刑法第八十六條第四項或第八十八條第三項免其刑之執行，第九十六條但書之付保安處分，第九十七條延長或免其處分之執行，第九十八條免其處分之執行及第九十九條許可處分之執行，由檢察官聲請法院裁定之。檢察官因被告未滿十四歲或心神喪失而為不起訴之處分者，如認有宣告保安處分之必要，得聲請法院裁定之。法院裁判時未併宣告保安處分，而檢察官認為有宣告之必要者，得於裁判後三個月內聲請法院裁定之。
+* 481 依刑法第八十六條第三項、第八十七條第三項、第八十八條第二項、第八十九條第二項、第九十條第二項或第九十八條第一項前段免其處分之執行，第九十條第三項許可延長處分，第九十三條第二項之付保護管束，或第九十八條第一項後段、第二項免其刑之執行，及第九十九條許可處分之執行，由檢察官聲請該案犯罪事實最後裁判之法院裁定之。第九十一條之一第一項之施以強制治療及同條第二項之停止強制治療，亦同。檢察官依刑法第十八條第一項或第十九條第一項而為不起訴之處分者，如認有宣告保安處分之必要，得聲請法院裁定之。法院裁判時未併宣告保安處分，而檢察官認為有宣告之必要者，得於裁判後三個月內，聲請法院裁定之。
+
+> 釋：一、配合刑法第八十六條至第九十條、第九十三條、第九十八條及第九十九條等有關刑或保安處分之執行等規定，有增刪或調整條次、內容之修正，爰配合修正第一項前段。二、強制治療屬拘束人身自由之保安處分，性質上應由法院裁定為之，且依九十四年二月二日修正公布刑法第九十一條之一有關性罪犯之矯治規定，已將刑前強制治療修正為徒刑執行期滿前，及依性侵害犯罪防治法等法律規定接受輔導或治療後，經鑑定、評估有再犯之危險者。依上開規定，性罪犯有無接受強制治療之必要，係根據輔導或治療結果而定，而強制治療時間之長短，則於強制治療執行期間，經由每年鑑定、評估，視其再犯危險是否顯著降低為斷，為求允當，亦須由檢察官向法院聲請停止治療，爰於第一項後段一併明定之。三、對於第一項所列舉之免除、延長或許可之執行、強制治療或停止治療等，應由該案犯罪事實最後裁判之法院為之，方足以審查裁判當時所斟酌之事由是否仍然存在，此於其他法院尚難代為判斷，自應將第一項所定「法院」一併修正為「該案犯罪事實最後裁判之法院」。四、第二項之「心神喪失」，係有關刑事責任能力規定，爰配合刑法第十九條為刑事責任能力定義之修正，將有關「心神喪失」連同「未滿十四歲」規定，均改以逕引刑法條項為依據。五、第三項未修正。
 
 * 482 依刑法第四十三條易以訓誡者，由檢察官執行之。
 
