法院組織法 2006.12.12

--- a/司法-司法組織/法院組織法.md
+++ b/司法-司法組織/法院組織法.md
@@ -76,9 +76,9 @@
 
 > 釋：條文本文不修正，修正附表書記官及通譯之職稱。
 
-* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等。高等法院法官，繼續服務二年以上，得晉敘至簡任第十二職等至第十四職等。司法院得調地方法院試署或候補法官至高等法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。高等法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之；承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。試署法官或候補法官調高等法院辦事期間，計入其試署或候補法官年資。具律師執業資格者經聘用充任法官助理期間，計入其律師執業年資。
+* 34 高等法院置法官，簡任第十職等至第十一職等或薦任第九職等；試署法官，薦任第七職等至第九職等。高等法院法官繼續服務二年以上，得晉敘至簡任第十二職等至第十四職等。司法院因應高等法院業務需要，得調地方法院或其分院試署法官或候補法官至高等法院辦事，承法官之命，辦理訴訟案件程序及實體之審查、法律問題之分析、資料之蒐集、裁判書之草擬等事務。高等法院於必要時得置法官助理，依聘用人員聘用條例聘用各種專業人員充任之，承法官之命，辦理訴訟案件程序之審查、法律問題之分析、資料之蒐集等事務。試署法官或候補法官調高等法院辦事期間，計入其試署法官或候補法官年資。具律師執業資格者，經聘用充任法官助理期間，計入其律師執業年資。第十二條第九項規定，於高等法院準用之。
 
-> 釋：一、第一項、第三項至第六項不修正。二、為配合法院組織法第十五條第二項之修正，以曾任高等法院或其分院法官、或兼任庭長、院長者，其職等得晉敘簡任第十二職等至第十四職等，則繼續服務高等法院或其分院之法官，亦應比照調整為「繼續服務二年以上」，俾使第一、二審法官職期職等一致。
+> 釋：一、配合司法人員人事條例修正第十一條第一項第二款增訂律師執業十二年以上得轉任二審法官、檢察官之規定，爰於第一項後段增列試署法官之官職等，俾順利延攬資深優良律師出任二審法院法官。二、參照本法第十二條第五項條文用語，酌作文字修正。三、增列第七項規定，使第十二條第九項，於高等法院準用之。
 
 * 35 高等法院置院長一人，由法官兼任，簡任第十三職等至第十四職等，綜理全院行政事務。
 
