--- a/行政-內政/自來水法.md
+++ b/行政-內政/自來水法.md
@@ -322,9 +322,13 @@
 
 * 109 依本法規定所處之罰鍰，如有抗不繳納者，移送法院強制執行之。
 
-* 110 每日供水量在三百立方公尺以下之簡易自來水事業，得不適用第十條、第四十三條至第四十六條、第四十八條、第四十九條、第五十七條、第六十三條之規定，由直轄市或縣（市）主管機關另行訂定辦法，報請中央主管機關備查。
+* 110 每日供水量在三千立方公尺以下之簡易自來水事業，得不適用第九條、第四十三條、第四十六條及第五十九條之規定，由直轄市或縣（市）主管機關另行訂定自治法規管理之。前項每日供水量在三百立方公尺以下之簡易自來水事業，得不適用第五十七條之規定。前二項簡易自來水事業得由所有權人或管理委員會代表人申請自來水事業同意後，由自來水事業代管或接管其供水系統。
 
-> 釋：配合臺灣省政府功能業務及組織調整，將省（市）主管機關視地方情形訂定簡易自來水事業辦法之規定，修正改由直轄市或縣（市）主管機關訂定，並報請中央主管機關備查。
+> 釋：一、依目前運作現況，每日供水量在三百立方公尺以下之簡易自來水設備大多由社區自行成立委員會或交由其他單位操作管理，由於住戶用水需求增加，設施不斷擴充之結果，每日供水量達在三百立方公尺以上者，所在多有。為顧及民眾使用自來水之需求，爰修正本條規定，以符實際。二、目前簡易自來水多以簡易設施處理後，提供他人使用。其事業規模小，且臺灣地區約尚有四百三十個簡易自來水系統，其中屬於山地鄉部落自行管理者即有三百六十二處，該等系統地處偏遠，設施囿於地形、經費等因陋就簡，要求該等設施應符合現行自來水法之規定，或需限以公司組織型態成立、設置消防栓等，恐有實際上困難，又該等簡易自來水事業供水量及供水對象均有限，尚無需經由中央主管機關訂定水價之必要，由地方主管機關依自治法規辦理即屬已足，爰排除第九條、第四十三條、第四十六條及第五十九條規定之適用。三、新增第二項，每日供水量在三百立方公尺以下之簡易自來水事業，避免將來聘僱、施工、管理、化驗及操作等人員受限，得不適用第五十七條之規定。四、新增第三項，簡易自來水事業為考量經濟規模，在經自來水事業同意後，得交由自來水事業代管或接管。
+
+* 110.1 自來水事業對於代管簡易自來水事業得酌收代管期間之操作維護費用及其他一切必要之費用，其費用由自來水事業訂定，報請主管機關備查。簡易自來水事業之所有權人或管理委員會於代管期間應將其供水系統設備、廠房、水權狀等列冊無償移交自來水事業使用管理。前項簡易自來水事業如為接管者，其所有權人或管理委員會應將其供水系統設備、廠房等之所有權列冊無償點交使用。前二項簡易自來水事業設備等所使用之土地，若使用年限已達十年以上者，免辦理地上權或所有權移轉登記。自來水事業可無償使用，並視為有地上權。本法於中華民國九十六年一月五日修正後，新建每日供水量在一百立方公尺以上之簡易自來水事業，於已有埋設幹管地區，應申請自來水事業代管或接管，並納入供水系統後，始得供水。
+
+> 釋：一、本條新增。二、按自來水事業代管簡易自來水事業需支出動力費、維護費、折舊費及人事費等必要費用，依使用者付費原則，自應由所有權人或管理委員會支付，其收費標準由自來水事業訂定，報請主管機關備查。三、為使自來水事業有使用管理該等設備，代管期間所有權人或管理委員會應將其供水系統設備、廠房、水權等列冊無償移交使用。四、簡易自來水事業如為接管者，其所有權人或管理委員會應將其供水系統設備、廠房等之所有權列冊無償點交使用。五、簡易自來水事業考量其土地所有權移轉不易且程序複雜，若要辦理地上權或所有權移轉登記，恐窒礙難行，爰引使用年限已達十年以上之土地，自來水事業可無償使用，並視為有地上權。六、新建每日供水量在一百立方公尺以上之簡易自來水供水系統，為免後續因起造人或管理單位退場後，致生供水系統設備維護管理等相關問題，影響居民用水權益。明定於已有埋設自來水幹管地區，應由起造人申請自來水事業同意代管或接管，並納入供水系統後，始得供水。
 
 * 111 本法施行前已經營之自來水事業，與本法之規定不符者，應於本法施行後一年內依本法之規定辦理之。
 
