中華民國刑法 2007.1.12

--- a/司法-刑事/中華民國刑法.md
+++ b/司法-刑事/中華民國刑法.md
@@ -434,7 +434,9 @@
 
 * 145 以生計上之利害，誘惑投票人不行使其投票權或為一定之行使者，處三年以下有期徒刑。
 
-* 146 以詐術或其他非法之方法，使投票發生不正確之結果或變造投票之結果者，處五年以下有期徒刑。前項之未遂犯罰之。
+* 146 以詐術或其他非法之方法，使投票發生不正確之結果或變造投票之結果者，處五年以下有期徒刑。意圖使特定候選人當選，以虛偽遷徙戶籍取得投票權而為投票者，亦同。前二項之未遂犯罰之。
+
+> 釋：一、公職人員經由各選舉區選出，自應獲得各該選舉區居民多數之支持與認同，始具實質代表性，若以遷徙戶籍但未實際居住戶籍地之方式，取得投票權參與投票，其影響戕害民主選舉之精神甚深。二、為導正選舉風氣，爰增訂第二項：「意圖使特定候選人當選，以虛偽遷徙戶籍取得投票權而為投票者，亦同。」。三、現未實際居住於戶籍地者有數百萬人，其因就業、就學、服兵役未實際居住於戶籍地，或為子女學區、農保、都會區福利給付優渥、保席次或其他因素而遷籍於未實際居住地，其原因不一。然此與意圖支持特定候選人當選，進而遷徙戶籍之情形不同，並非所有籍在人不在參與投票均須以刑罰相繩，是以第二項以意圖使特定候選人當選虛偽遷徙戶籍投票者，為處罰之對象。四、原第二項改列為第三項，並將句首之「前項」修正為：「前二項」。
 
 * 147 妨害或擾亂投票者，處二年以下有期徒刑、拘役或五百元以下罰金。
 
