民事訴訟法 2007.3.2

--- a/司法-民事/民事訴訟法.md
+++ b/司法-民事/民事訴訟法.md
@@ -374,13 +374,13 @@
 
 > 釋：變更所屬節次，由第一節改列第三節，條文內容未修正。
 
-* 83 原告撤回其訴者，訴訟費用由原告負擔。其於第一審言詞辯論終結前撤回者，得於撤回後三個月內聲請退還該審級所繳裁判費二分之一。前項規定，於當事人撤回上訴或抗告者準用之。
+* 83 原告撤回其訴者，訴訟費用由原告負擔。其於第一審言詞辯論終結前撤回者，得於撤回後三個月內聲請退還該審級所繳裁判費三分之二。前項規定，於當事人撤回上訴或抗告者準用之。
 
-> 釋：變更所屬節次，由第一節改列第三節，條文內容未修正。
+> 釋：為鼓勵當事人撤回無益或不必要之訴訟，以減輕訟累，並減省法院勞費，爰修正第一項，將原告得聲請退還所繳裁判費之比例提高為三分之二。
 
-* 84 當事人為和解者，其和解費用及訴訟費用各自負擔之。但別有約定者，不在此限。和解成立者，當事人得於成立之日起三個月內聲請退還其於該審級所繳裁判費二分之一。
+* 84 當事人為和解者，其和解費用及訴訟費用各自負擔之。但別有約定者，不在此限。和解成立者，當事人得於成立之日起三個月內聲請退還其於該審級所繳裁判費三分之二。
 
-> 釋：變更所屬節次，由第一節改列第三節，條文內容未修正。
+> 釋：和解、調解同為裁判外解決紛爭之機制，為鼓勵當事人成立和解，以減輕訟累，並增進當事人間之和諧，爰參考鄉鎮市調解條例第二十八條第一項有關原告得向法院聲請退還已繳裁判費三分之二之規定，將本條第二項所定當事人得聲請退還所繳裁判費之比例提高為三分之二。
 
 * 85 共同訴訟人，按其人數，平均分擔訴訟費用。但共同訴訟人於訴訟之利害關係顯有差異者，法院得酌量其利害關係之比例，命分別負擔。共同訴訟人因連帶或不可分之債敗訴者，應連帶負擔訴訟費用。共同訴訟人中有專為自己之利益而為訴訟行為者，因此所生之費用，應由該當事人負擔。
 
@@ -1560,9 +1560,9 @@
 
 > 釋：一、本文「左列」修正為「下列」，並列為第一項本文。二、現行法第二款規定原係為賦予敗訴之中華民國國民應有之程序權保障，惟為促進國際交流，此程序權之保障不宜以本國人為限，凡遭受敗訴判決之當事人，如在我國有財產或糾紛，而須藉由我國承認外國判決效力以解決紛爭者，均應予以保障。爰將本款「為中華民國人而」等字刪除。又為保障當事人之程序權，開始訴訟之通知或命令不僅應合法送達，並應給予當事人相當期間以準備行使防禦權，至於是否送達當事人本人，則非必要，爰修正第二款規定。三、第三款之規定，係指外國法院確定判決之內容在實體法上違背我國公序良俗之情形而言，然為保障當事人之程序權，就外國法院判決之訴訟程序違背我國公序良俗之情形，亦應包括在內。爰修正第三款規定，以求周延。所謂訴訟程序違背公序良俗，例如當事人雖已受送達，但未被賦予聽審或辯論之機會；或法官應迴避而未迴避，其判決明顯違反司法之中立性及獨立性。此外，外國法院之訴訟繫屬或確定判決，依第一百八十二條之二運用之結果，如與我國法院之訴訟繫屬或確定判決有所牴觸時，是否承認外國法院之訴訟繫屬或確定判決，亦應依個別具體狀況判斷是否違背我國公序良俗而定。至於外國法院之判決有無違背我國之公序良俗，乃係法官應依職權加以斟酌之事項，法官應促使當事人為適當之主張及舉證後加以判斷。四、第四款所謂「無國際相互之承認者」，係指司法上之承認而言，並非指國際法上或政治上之承認，為避免誤解，爰將「國際」二字刪除，以杜爭議。五、外國法院所為之確定裁定，例如命扶養或監護子女等有關身分關係之保全處分、確定訴訟費用額之裁定、就父母對於未成年子女權利義務之行使或負擔之事項所為之裁定等，為解決當事人間之紛爭，亦有承認其效力之必要，爰增訂第二項，明定外國法院之確定裁定準用第一項之規定。至於基於訴訟指揮所為程序上之裁定，因隨時得加以變更，故非本項所指之確定裁定。
 
-* 403 下列事件，除有第四百零六條第一項各款所定情形之一者外，於起訴前，應經法院調解：一、不動產所有人或地上權人或其他利用不動產之人相互間因相鄰關係發生爭執者。二、因定不動產之界線或設置界標發生爭執者。三、不動產共有人間因共有物之管理、處分或分割發生爭執者。四、建築物區分所有人或利用人相互間因建築物或其共同部分之管理發生爭執者。五、因增加或減免不動產之租金或地租發生爭執者。六、因定地上權之期間、範圍、地租發生爭執者。七、因道路交通事故或醫療糾紛發生爭執者。八、雇用人與受雇人間因僱傭契約發生爭執者。九、合夥人間或隱名合夥人與出名營業人間因合夥發生爭執者。十、配偶、直系親屬、四親等內之旁系血親、三親等內之旁系姻親、家長或家屬相互間因財產權發生爭執者。十一、其他因財產權發生爭執，其標的之金額或價額在新臺幣十萬元以下者。前項第十一款所定數額，司法院得因情勢需要，以命令減至新臺幣五萬元或增至十五萬元。
+* 403 下列事件，除有第四百零六條第一項各款所定情形之一者外，於起訴前，應經法院調解：一、不動產所有人或地上權人或其他利用不動產之人相互間因相鄰關係發生爭執者。二、因定不動產之界線或設置界標發生爭執者。三、不動產共有人間因共有物之管理、處分或分割發生爭執者。四、建築物區分所有人或利用人相互間因建築物或其共同部分之管理發生爭執者。五、因增加或減免不動產之租金或地租發生爭執者。六、因定地上權之期間、範圍、地租發生爭執者。七、因道路交通事故或醫療糾紛發生爭執者。八、雇用人與受雇人間因僱傭契約發生爭執者。九、合夥人間或隱名合夥人與出名營業人間因合夥發生爭執者。十、配偶、直系親屬、四親等內之旁系血親、三親等內之旁系姻親、家長或家屬相互間因財產權發生爭執者。十一、其他因財產權發生爭執，其標的之金額或價額在新臺幣五十萬元以下者。前項第十一款所定數額，司法院得因情勢需要，以命令減至新臺幣二十五萬元或增至七十五萬元。
 
-> 釋：現行條文所定起訴前應強制調解之事件，係逕以簡易事件為其決定標準，而未充份考量其事件性質多樣性或當事人間之關係如何，實有礙於調解功能之積極發揮，且未能分擔民事糾紛解決之途，尚欠允洽。爰加以修正之。
+> 釋：一、標的金額或價額在新臺幣五十萬元以下之爭執，如行訴訟程序，當事人、法院所花費之時間、勞力及費用，與標的金額或價額實不相當，為貫徹費用相當性原則，爰將第一項第十一款所定起訴前應先經法院調解之金額提高為新臺幣五十萬元以下，期可利用調解程序解決紛爭，避免冗長繁複之訴訟程序，達迅速息訟止爭之目的。二、起訴前應先經法院調解之小金額事件，其金額若干始屬妥適，每隨社會經濟狀況及其他情勢變遷而異，為使司法院能因應情勢，及時調整，並配合第一項第十一款之修正，爰修正第二項，授權司法院對於該款所定金額，得視情勢所需，於新臺幣二十五萬元至七十五萬元之限度內，以命令增減之。
 
 * 404 不合於前條規定之事件，當事人亦得於起訴前，聲請調解。有起訴前應先經法院調解之合意，而當事人逕行起訴者，經他造抗辯後，視其起訴為調解之聲請。但已為本案之言詞辯論者，不得再為抗辯。
 
@@ -1576,9 +1576,9 @@
 
 > 釋：實務上金融機構因消費借貸契約或本於信用卡契約有所請求之事件，被告通常未到庭，由原告聲請一造辯論判決，此等事件，應無調解之實益，爰增訂第一項第六款之規定。
 
-* 406.1 調解程序，由簡易庭法官行之。調解由法官選任調解委員一人至三人先行調解，俟至相當程度有成立之望或其他必要情形時，再報請法官到場。但兩造當事人合意或法官認為適當時，亦得逕由法官行之。當事人對於前項調解委員人選有異議或兩造合意選任其他適當之人者，法官得另行選任或依其合意選任之。
+* 406.1 調解程序，由簡易庭法官行之。但依第四百二十條之一第一項移付調解事件，得由原法院、受命法官或受託法官行之。調解由法官選任調解委員一人至三人先行調解，俟至相當程度有成立之望或其他必要情形時，再報請法官到場。但兩造當事人合意或法官認為適當時，亦得逕由法官行之。當事人對於前項調解委員人選有異議或兩造合意選任其他適當之人者，法官得另行選任或依其合意選任之。
 
-> 釋：一、本條係新增。二、為擴大法院調解功能，辦理調解事件之法院應儘可能普及深入民間，以便利當事人使用調解制度，爰增訂第一項，明定調解事件由簡易庭法官辦理。三、第二項係將第四百十一條第一、二項修正後移列。四、調解委員調解能否成功，繫乎當事人對於調解委員之信賴程度，如當事人對於法官選任之調解委員人選有異議，或兩造合意選任其他適當之人者，法院自宜另行選任或依其合意選任之。爰增訂第三項規定。
+> 釋：調解程序原則上由簡易庭法官選任調解委員一人至三人行之。惟如係訴訟繫屬中經兩造合意移付調解事件，原承審法官對案情知之最詳，由原承審法官依事件類型選任適當之調解委員行調解，有助於促成調解，爰於第一項增訂但書，明定此類事件，亦得由原法院、受命法官或受託法官行之，俾彈性運用，以提昇調解成立率。
 
 * 406.2 地方法院應將其管轄區域內適於為調解委員之人選列冊，以供選任；其人數、資格、任期及其聘任、解任等事項，由司法院定之。法官於調解事件認有必要時，亦得選任前項名冊以外之人為調解委員。
 
@@ -1656,9 +1656,9 @@
 
 > 釋：「法院」修正為「法官」。
 
-* 420.1 第一審訴訟繫屬中，得經兩造合意將事件移付調解。前項情形，訴訟程序停止進行。調解成立時，訴訟終結。調解不成立時，訴訟程序繼續進行。依第一項規定移付調解而成立者，原告得於調解成立之日起三個月內聲請退還已繳裁判費二分之一。
+* 420.1 第一審訴訟繫屬中，得經兩造合意將事件移付調解。前項情形，訴訟程序停止進行。調解成立時，訴訟終結。調解不成立時，訴訟程序繼續進行。依第一項規定移付調解而成立者，原告得於調解成立之日起三個月內聲請退還已繳裁判費三分之二。
 
-> 釋：第八十三條第一項及第八十四條第二項規定撤回起訴或和解成立者，得於三個月內聲請退還已繳裁判費二分之一，為避免當事人發生錯誤致損其權利，並求體例上一致，爰將移付調解成立者，其聲請退還已繳裁判費之期間由「三十日」修正為「三個月」。
+> 釋：為鼓勵當事人成立調解，以迅速息訟止爭，爰參考鄉鎮市調解條例第二十八條第一項有關原告得向法院聲請退還已繳裁判費三分之二之規定，將本條第三項所定原告得聲請退還已繳裁判費之比例提高為三分之二。
 
 * 421 法院書記官應作調解程序筆錄，記載調解成立或不成立及期日之延展或訴訟之辯論。但調解委員行調解時，得僅由調解委員自行記錄調解不成立或延展期日情形。第四百十七條之解決事件之方案，經法官當場宣示者，應一併記載於筆錄。調解成立者，應於十日內以筆錄正本，送達於當事人及參加調解之利害關係人。第二百十二條至第二百十九條之規定，於第一項、第二項筆錄準用之。
 
@@ -1676,7 +1676,9 @@
 
 > 釋：一、第一項「訴訟」修正為「事件」。二、原第二項規定移併於第一項，並做文字修正，俾資明確。三、當事人提起主觀或客觀合併之訴，其訴之一部非屬第四百零三條第一項之事件者，如就一部為強制調解，徒增程序延滯，爰於第二項規定此種情形，不適用前項視為調解聲請之規定。
 
-* 425 調解之聲請經撤回者，視為未聲請調解。但聲請人應負擔因聲請所生之全部費用。
+* 425 調解之聲請經撤回者，視為未聲請調解。第八十三條第一項之規定，於前項情形準用之。
+
+> 釋：為鼓勵當事人息訟止爭，撤回無益或不必要之調解聲請，以減省當事人及法院之勞費；爰刪除第一項但書，並增訂第二項，明定準用第八十三條第一項之規定，以定其費用之負擔及得聲請退還所繳聲請費用之比例，俾利適用。
 
 * 426 法官、書記官及調解委員因經辦調解事件，知悉他人職務上、業務上之秘密或其他涉及個人隱私之事項，應保守秘密。
 
@@ -1962,7 +1964,9 @@
 
 * 462 上訴因判決而終結者，第二審法院書記官應於判決確定後，速將判決正本附入卷宗，送交第一審法院。前項規定，於上訴之非因判決而終結者準用之。
 
-* 463 除本章別有規定外，前編第一章之規定，於第二審程序準用之。
+* 463 除本章別有規定外，前編第一章、第二章之規定，於第二審程序準用之。
+
+> 釋：為尊重當事人之程序選擇權，強化調解之功能，促使當事人儘量利用調解程序解決紛爭，以迅速息訟止爭，達減輕當事人及法院勞費之目的；上訴審程序，亦宜賦與當事人選擇改依調解程序解決紛爭之機會，爰增訂準用第二編第二章調解程序之規定。又所謂準用，指在性質相同之範圍內，予以適用而言，性質不同者，自不在準用之列。例如第二編第二章調解程序有關強制調解、聲請調解等規定，因其性質與第二審程序有異，於第二審程序即無準用之餘地，附此敘明。
 
 * 464 對於第二審之終局判決，除別有規定外，得上訴於管轄第三審之法院。
 
