--- a/行政-經濟及能源/電業法.md
+++ b/行政-經濟及能源/電業法.md
@@ -162,13 +162,13 @@
 
 * 74 政府機關為防禦災害要求緊急供電時，電業不得拒絕，其所需費用，由該機關負擔。
 
-* 75 電器承裝業，應向直轄市或縣（市）主管機關登記，始得營業，並應於開業後一個月內加入相關電氣工程工業同業公會。相關電氣工程工業同業公會不得拒絕其加入。電器承裝業登記管理業務，直轄市或縣（市）主管機關得委託相關電氣工程工業同業公會辦理。電器承裝業之電匠，非經所在地直轄市或縣（市）地方主管機關考驗及格給予憑證，不得工作。前項考驗，地方主管機關辦理有困難時，得報請中央主管機關統籌辦理或委託該區域內之電業辦理。電器承裝業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。電匠考驗、發照、撤銷或廢止證照及管理之規則，由中央主管機關定之。
+* 75 電器承裝業，應向直轄市或縣（市）主管機關登記，並於一個月內加入相關電氣工程工業同業公會，始得營業。相關電氣工程工業同業公會不得拒絕其加入。用戶用電設備工程應交由電器承裝業承裝、施作及裝修，並在向電業申報竣工供電時，應檢附相關電氣工程工業同業公會核發之申報竣工會員證明單，方得接電。但其他法令有特別規定者，不在此限。電業設備或用戶用電設備工程由依法登記執業之電機技師設計或監造者，其圖樣設計資料及說明書或竣工報告單送由電業審查核定時，應檢附電機技師公會核發之會員證明，方得審查核定或接電。前項之技師，應加入執業所在地之技師公會後，始得執行電業設備或用戶用電設備工程之設計或監造等業務，技師公會亦不得拒絕其加入。電器承裝業應聘電器承裝相關類科技能檢定合格取得證書者，或中華民國九十六年三月五日本法修正施行前，依法考驗合格，取得證書之電匠，從事電器承裝相關工作。電器承裝業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。
 
 > 釋：照黨團協商條文通過。
 
-* 75.1 裝有電力設備之工廠、礦場、供公眾使用之建築物及受電電壓屬高壓以上之用電場所，應置專任電氣技術人員或委託用電設備檢驗維護業負責維護與電業供電設備分界點以內一般及緊急電力設備之用電安全。未依前項規定置專任電氣技術人員或委託用電設備檢驗維護業維護電力設備者，電業得拒絕供電。第一項場所之認定範圍及標準，由中央主管機關定之。專任電氣技術人員及用電設備檢驗維護業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。
+* 75.1 裝有電力設備之工廠、礦場、供公眾使用之建築物及受電電壓屬高壓以上之用電場所，應置專任電氣技術人員或委託用電設備檢驗維護業負責維護與電業供電設備分界點以內一般及緊急電力設備之用電安全，並向直轄市或縣（市）主管機關辦理登記。用電場所違反前項規定，主管機關應通知其限期改善；屆期仍不改善者，得會同電業停止供電。用電設備檢驗維護業，應向直轄市或縣（市）主管機關登記，並於一個月內加入相關用電設備檢驗維護工程工業同業公會，始得營業。相關用電設備檢驗維護工程工業同業公會不得拒絕其加入。第一項場所之認定範圍及標準，由中央主管機關定之。專任電氣技術人員及用電設備檢驗維護業登記、撤銷或廢止登記及管理之規則，由中央主管機關定之。
 
-> 釋：一、本條新增。二、臺灣省政府訂有「電氣技術人員管理規則」，管理用電場所及電氣技術人員。精省後，改由中央電業主管機關訂定職權命令管理，爰配合「行政程序法」施行，為明確規定授權依據，明定專任電氣技術人員及用電設備檢驗維護業登記、撤銷或廢止登記及管理之規則由中央主管機關訂定。
+> 釋：照黨團協商條文通過。
 
 * 76 電業負責人應於就任十五日內，報請中央主管機關備案。
 
@@ -246,7 +246,9 @@
 
 * 111 自用發電設備人有左列情形之一者，處二百元以下罰鍰：一、不依第一百零一條或第一百零四條規定，申請登記或變更登記者。二、不依第一百零三條規定，造送報告者。
 
-* 112 電器承裝業，違反第七十五條第一項規定者，處二百元以下罰鍰，並得勒令停止營業。
+* 112 電器承裝業，違反第七十五條第一項規定，或用電設備檢驗維護業，違反第七十五條之一第三項規定者，處二百元以下罰鍰，並得勒令停止營業。
+
+> 釋：照黨團協商條文通過。
 
 * 113 電匠違反第七十五條第二項規定者，處一百元以下罰鍰，並得勒令停止工作。
 
