刑事訴訟法 2007.3.5

--- a/司法-刑事/刑事訴訟法.md
+++ b/司法-刑事/刑事訴訟法.md
@@ -1134,9 +1134,9 @@
 
 * 284 第三十一條第一項所定之案件無辯護人到庭時，不得審判。但宣示判決，不在此限。
 
-* 284.1 除簡式審判程序及簡易程序案件外，第一審應行合議審判。
+* 284.1 除簡式審判程序、簡易程序及第三百七十六條第一款、第二款所列之罪之案件外，第一審應行合議審判。
 
-> 釋：一、本條係新增。二、訴訟結構之金字塔化，係以堅實的第一審作為基礎，因此，提昇第一審之審判品質，乃為其重要前提，尤其第一審特別接近犯罪事實發生之時點，若第一審未能查明事實，上級審往往因時間經過而證據不存在，導致事實真相更難澄清，為強化第一審之審判功能，以收集思廣益之效，除簡式審判程序及簡易案件外，第一審應採行合議制，並落實合議制度，使第一審之審判確實成為事實審之重心。
+> 釋：民國88年全國司法改革會議固達成除簡易案件外，第一審應採行合議審判之共識，惟該項共識係以訴訟結構之金字塔化為配套，即第二審、第三審分別配套成為事後審及嚴格法律審。茲上開金字塔化之修法尚未完成，連帶使因訴訟結構金字塔化後，可以將第二、三審部分人力移到一審之規劃，尚無從據以辦理，因此以第一審法官有限之人力，如不分案件是否輕微均行合議審判，將嚴重排擠審理其他行通常程序案件之時程，因此在第二審仍維持覆審制之架構下，將屬輕微案件，一般而言案情亦較為單純之第三百七十六條第一款、第二款案件修正為可由法官獨任審判，而讓第一審法官對於該類案件可行獨任審判，其將更能投注心力在案情較為重大複雜案件之審判工作，對於司法資源將可作更合理、有效之分配，爰修正本條規定。至於行通常審判程序之第三百七十六條第一款、第二款所列之罪之案件，其案情如確屬繁雜，且法官認為有必要時，亦得行合議審判，乃屬當然。而待日後第二審、第三審之修法完成，本條規定乃將隨之修正為所有行通常程序之案件均應行合議審判，併予說明。
 
 * 285 審判期日，以朗讀案由為始。
 
