行政訴訟法 2007.6.5

--- a/司法-行政訴訟/行政訴訟法.md
+++ b/司法-行政訴訟/行政訴訟法.md
@@ -22,6 +22,22 @@
 
 * 12 民事或刑事訴訟之裁判，以行政處分是否無效或違法為據者，應依行政爭訟程序確定之。前項行政爭訟程序已經開始者，於其程序確定前，民事或刑事法院應停止其審判程序。
 
+* 12.1 起訴時法院有受理訴訟權限者，不因訴訟繫屬後事實及法律狀態變更而受影響。訴訟繫屬於行政法院後，當事人不得就同一事件向其他不同審判權之法院更行起訴。
+
+> 釋：一、本條新增。二、基於訴訟經濟及程序安定性之考量，受訴法院於起訴時有審判權者，不應因訴訟繫屬後事實及法律狀態變更而變成無審判權，爰參酌德國法院組織法第十七條第一項第一句規定，於第一項規定起訴時法院有受理訴訟權限者，不因訴訟繫屬後事實及法律狀態變更而受影響。三、為使行政法院就審判權之有無，能儘速以第十二條之二之方式確定，應使訴訟繫屬有「法律救濟途徑障礙」之法律效果，即訴訟經繫屬後，當事人不得向不同審判權之法院更行起訴，爰參酌德國法院組織法第十七條第一項第二句之規定，於第二項明定之。
+
+* 12.2 行政法院認其有受理訴訟權限而為裁判經確定者，其他法院受該裁判之羈束。行政法院認其無受理訴訟權限者，應依職權以裁定將訴訟移送至有受理訴訟權限之管轄法院。數法院有管轄權而原告有指定者，移送至指定之法院。移送之裁定確定時，受移送之法院認其亦無受理訴訟權限者，應以裁定停止訴訟程序，並聲請司法院大法官解釋。受移送之法院經司法院大法官解釋無受理訴訟權限者，應再行移送至有受理訴訟權限之法院。當事人就行政法院有無受理訴訟權限有爭執者，行政法院應先為裁定。行政法院為第二項及前項之裁定前，應先徵詢當事人之意見。
+
+> 釋：一、本條新增。二、為儘速確定審判權，如果行政法院已認定其有審判權並進而為裁判經確定者，即不容再由其他審判權法院為相異之認定，應受該裁判之羈束，爰參酌德國法院組織法第十七條之一第一項之規定，於第一項明定之。三、為不使訴訟審判權歸屬認定困難之不利益由當事人負擔，如行政法院認其對訴訟無審判權，應依職權以裁定移送至有審判權法院。有審判權之管轄法院有數個，而原告有所指定時，應移送至原告所指定之法院，爰參酌司法院釋字第五四○號解釋意旨，於第二項明定之。四、訴訟移送之裁定確定後，如受移送法院亦認其有審判權，訴訟由其審判固無問題。惟如受移送法院認其無審判權，則由其以裁定停止訴訟程序，並聲請司法院大法官解釋，以終局確定審判權之歸屬，爰於第三項明定之。五、受移送法院如依第三項聲請司法院大法官解釋，如確定其有審判權，則由其審判；如確定其無審判權，則原移送之裁定失其效力，由受移送法院再行移送至有審判權之法院，爰於第四項明定之。六、為使行政法院有無審判權能儘速確定，參酌德國法院組織法第十七條之一第三項第二句規定，於第五項規定如當事人對行政法院有無審判權有爭執者，行政法院應就此部分先為裁定。如行政法院認其無審判權，自應依第二項為之。如行政法院認其有審判權之裁定確定，依第一項之規定，其他法院受該裁定之羈束。七、為保障當事人之程序上權利，及確保法院關於審判權有無之判斷正確，第六項規定行政法院為第二項及第五項之裁定前，應先徵詢當事人之意見。
+
+* 12.3 移送訴訟前如有急迫情形，行政法院應依當事人聲請或依職權為必要之處分。移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。前項情形，行政法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
+
+> 釋：一、本條新增。二、第一項參照行政訴訟法第十八條、民事訴訟法第二十九條，規定移送訴訟前如有急迫情形，行政法院應依當事人聲請或依職權為必要之處分，以保障當事人權益。三、第二項規定移送訴訟之效力，即移送訴訟之裁定確定時，視為該訴訟自始即繫屬於受移送之法院。四、第三項參照行政訴訟法第十八條、民事訴訟法第三十一條，規定移送訴訟之裁定確定時，行政法院書記官應速將裁定正本附入卷宗，送交受移送之法院。
+
+* 12.4 行政法院將訴訟移送至其他法院者，依受移送法院應適用之訴訟法定其訴訟費用之徵收。移送前所生之訴訟費用視為受移送法院訴訟費用之一部分。應行徵收之訴訟費用，行政法院未加徵收、徵收不足額或徵收超額者，受移送法院應補行徵收或退還超額部分。
+
+> 釋：一、本條新增。二、不同審判權法院之訴訟費用規定並不相同，當行政法院將訴訟移送至其他法院時，自應依受移送法院應適用之訴訟法定其訴訟費用之徵收。而在行政法院之訴訟程序中，可能已發生訴訟費用，此訴訟費用應列為受移送法院訴訟程序中之訴訟費用，爰於第一項明定之。三、應行徵收之訴訟費用，行政法院未加徵收、徵收不足額或徵收超額者，自應由受移送法院補行徵收或退還超額部分，爰於第二項明定之。
+
 * 13 對於公法人之訴訟，由其公務所所在地之行政法院管轄。其以公法人之機關為被告時，由該機關所在地之行政法院管轄。對於私法人或其他得為訴訟當事人之團體之訴訟，由其主事務所或主營業所所在地之行政法院管轄。對於外國法人或其他得為訴訟當事人之團體之訴訟，由其在中華民國之主事務所或主營業所所在地之行政法院管轄。
 
 * 14 前條以外之訴訟，由被告住所地之行政法院管轄，其住所地之行政法院不能行使職權者，由其居所地之行政法院管轄。被告在中華民國現無住所或住所不明者，以其在中華民國之居所，視為其住所；無居所或居所不明者，以其在中華民國最後之住所，視為其住所；無最後住所者，以中央政府所在地，視為其最後住所地。訴訟事實發生於被告居所地者，得由其居所地之行政法院管轄。
@@ -94,7 +110,9 @@
 
 * 48 民事訴訟法第五十九條至第六十一條、第六十三條至第六十七條之規定，於第四十四條之參加訴訟準用之。
 
-* 49 當事人得委任代理人為訴訟行為。但每一當事人委任之訴訟代理人不得逾三人。行政訴訟應以律師為訴訟代理人。非律師具有左列情形之一者，亦得為訴訟代理人：一、依法令取得與訴訟事件有關之代理人資格者。二、具有該訴訟事件之專業知識者。三、因職務關係為訴訟代理人者。四、與當事人有親屬關係者。前項第二款、第四款之訴訟代理人，行政法院認為不適當時，得以裁定禁止之。
+* 49 當事人得委任代理人為訴訟行為。但每一當事人委任之訴訟代理人不得逾三人。行政訴訟應以律師為訴訟代理人。非律師具有下列情形之一者，亦得為訴訟代理人：一、稅務行政事件，具備會計師資格者。二、專利行政事件，具備專利師資格或依法得為專利代理人者。三、當事人為公法人、中央或地方機關、公法上之非法人團體時，其所屬專任人員辦理法制、法務、訴願業務或與訴訟事件相關業務者。委任前項之非律師為訴訟代理人者，應得審判長許可。第二項之非律師為訴訟代理人，審判長許其為本案訴訟行為者，視為已有前項之許可。前二項之許可，審判長得隨時以裁定撤銷之，並應送達於為訴訟委任之人。訴訟代理人委任複代理人者，不得逾一人。前四項之規定，於複代理人適用之。
+
+> 釋：一、為配合公文直式橫書格式，爰將「左列」修正為「下列」。二、訴訟代理人應以律師充之。但在稅務、專利行政事件，會計師、專利師或依法得為專利代理人者，有足夠專業素養為訴訟代理人，以應實際之需求。會計師及專利師或專利代理人之資格分別依會計師法第一條、專利法第十一條之規定。又當事人為公法人、中央或地方機關、公法上之非法人團體時，其所屬專任人員辦理法制、法務、訴願業務或與訴訟事件相關業務者，有充分之專業知識，足資擔任訴訟代理人，爰訂定第三款。三、非律師為訴訟代理人時，為確保訴訟代理人有足夠之專業知識，以保障當事人權益，爰修正原第三項規定，明定非律師為訴訟代理人者，應得審判長許可。四、審判長許可非律師為訴訟代理人，原應以裁定為之，如審判長已許其為本案訴訟行為，應視為已得許可，爰增訂第四項規定之。五、非律師為訴訟代理人，雖經審判長許可，如其不適任，或不宜為訴訟行為，審判長自得隨時以裁定撤銷之。此項裁定亦應送達於為訴訟委任之人，俾利委任人另行委任適當之訴訟代理人。六、本條係對訴訟代理人之人數及資格所為之限制。惟訴訟代理人得委任複代理人（最高法院七十年台上字第四六八八號判例參照），如對複代理人無人數及資格之限制，則訴訟代理人得透過委任複代理人之方式，規避對訴訟代理人人數及資格之限制規定，爰增訂第六項規定防杜之。
 
 * 50 訴訟代理人應於最初為訴訟行為時提出委任書。但由當事人以言詞委任經行政法院書記官記明筆錄者，不在此限。
 
@@ -192,25 +210,61 @@
 
 * 97 裁判草案及其準備或評議文件，不得交當事人或第三人閱覽、抄錄、影印或攝影，或付與繕本、影本或節本；裁判書在宣示前，或未經法官簽名者，亦同。
 
-* 98 行政訴訟不徵收裁判費。裁判費以外其他進行訴訟之必要費用，其徵收辦法由司法院定之。前項費用由敗訴之當事人負擔，但為第一百九十八條之判決時，由被告負擔。
+* 98 訴訟費用指裁判費及其他進行訴訟之必要費用，由敗訴之當事人負擔。但為第一百九十八條之判決時，由被告負擔。起訴，按件徵收裁判費新臺幣四千元。適用簡易訴訟程序之事件，徵收裁判費新臺幣二千元。
 
-* 99 因可歸責於參加人之事由致生無益之費用者，行政法院得命該參加人負擔其全部或一部。依第四十四條參加訴訟所生之費用，由參加人負擔。但他造當事人依第九十八條第三項及準用民事訴訟法第七十九條至第八十四條規定應負擔之訴訟費用，仍由該當事人負擔。
+> 釋：照黨團協商條文通過。
 
-* 100 進行訴訟之必要費用，行政法院得定期命當事人預納。逾期未納者，由國庫墊付，並於判決確定後，依職權裁定，向應負擔訴訟費用之人徵收之。前項裁定得為執行名義。
+* 98.1 以一訴主張數項標的，或為訴之變更、追加或提起反訴者，不另徵收裁判費。
+
+> 釋：一、本條新增。二、訴之合併，仍係利用同一訴訟程序進行，應以一件計徵裁判費。
+
+* 98.2 上訴，依第九十八條第二項規定，加徵裁判費二分之一。發回或發交更審再行上訴，或依第二百五十七條第二項為移送，經判決後再行上訴者，免徵裁判費。
+
+> 釋：一、本條新增。二、第一項規定上訴應繳之裁判費。三、發回或發交更審後再行上訴，或依行政訴訟法第二百五十七條第二項為移送，經判決後再行上訴之情形，參酌民事訴訟法第七十七條之十六第一項之規定，免徵裁判費。
+
+* 98.3 再審之訴，按起訴法院之審級，依第九十八條第二項及前條第一項規定徵收裁判費。對於確定之裁定聲請再審者，徵收裁判費新臺幣一千元。
+
+> 釋：一、本條新增。二、再審之訴，屬於新訴，自應按起訴法院之審級，依第九十八條第二項及第九十八條之二第一項規定徵收裁判費。又對於確定之裁定聲請再審，規定徵收裁判費新臺幣一千元。
+
+* 98.4 抗告，徵收裁判費新臺幣一千元。
+
+> 釋：一、本條新增。二、本條規定抗告應徵收之裁判費。
+
+* 98.5 聲請或聲明，不徵收裁判費。但下列聲請，徵收裁判費新臺幣一千元：一、聲請參加訴訟或駁回參加。二、聲請回復原狀。三、聲請停止執行或撤銷停止執行之裁定。四、起訴前聲請證據保全。五、聲請重新審理。六、聲請假扣押、假處分或撤銷假扣押、假處分之裁定。
+
+> 釋：一、本條新增。二、明定聲請或聲明行為，原則上不徵收裁判費。但在聲請參加訴訟或駁回參加、聲請回復原狀、聲請停止執行或撤銷停止執行之裁定、起訴前聲請證據保全、聲請重新審理及聲請假扣押、假處分或撤銷假扣押、假處分之裁定，應徵收裁判費一千元。
+
+* 98.6 下列費用之徵收，除法律另有規定外，其項目及標準由司法院定之：一、影印費、攝影費、抄錄費、翻譯費、運送費及登載公報新聞紙費。二、證人及通譯之日費、旅費。三、鑑定人之日費、旅費、報酬及鑑定所需費用。四、其他進行訴訟及強制執行之必要費用。郵電送達費及行政法院人員於法院外為訴訟行為之食、宿、交通費，不另徵收。
+
+> 釋：一、本條新增。二、進行訴訟之必要費用，其項目及金額，極為繁瑣，又必須隨社會經濟情勢調整，除法律已有規定外，其項目及標準授權由司法院定之，以符實際需要，爰於第一項明定之。三、為簡化訴訟文書逐件封貼郵票之作業方式，減輕當事人購買郵票及法院登記、核算、催補、退還郵票之勞費，及免除因當事人另行支付行政法院人員於法院外為訴訟行為之食、宿、交通費之不便，上述費用應併入裁判費，不另徵收，爰明定之。
+
+* 99 因可歸責於參加人之事由致生無益之費用者，行政法院得命該參加人負擔其全部或一部。依第四十四條參加訴訟所生之費用，由參加人負擔。但他造當事人依第九十八條第一項及準用民事訴訟法第七十九條至第八十四條規定應負擔之訴訟費用，仍由該當事人負擔。
+
+> 釋：第九十八條第一項係由原條文第三項移列修正，本條第二項「第九十八條第三項」之規定，應配合修正為「第九十八條第一項」。
+
+* 100 裁判費除法律別有規定外，當事人應預納之。其未預納者，行政法院應定期命當事人繳納，逾期未納者，行政法院應駁回其訴、上訴、抗告、再審或其他聲請。進行訴訟之必要費用，行政法院得定期命當事人預納。逾期未納者，由國庫墊付，並於判決確定後，依職權裁定，向應負擔訴訟費用之人徵收之。前項裁定得為執行名義。
+
+> 釋：一、配合徵收裁判費之規定，增訂第一項明定裁判費採取預納原則，除法律別有規定外，當事人應預納之。其未預納者，行政法院應定期命當事人繳納，逾期未納者，行政法院應駁回其訴、上訴、抗告、再審或其他聲請。二、原第一項、第二項移列為第二項、第三項。
 
 * 101 當事人無資力支出訴訟費用者，行政法院應依聲請，以裁定准予訴訟救助。但顯無勝訴之望者，不在此限。
 
 * 102 聲請訴訟救助，應向受訴行政法院為之。聲請人無資力支出訴訟費用之事由應釋明之。前項釋明，得由受訴行政法院管轄區域內有資力之人出具保證書代之。前項保證書內，應載明具保證書人於聲請訴訟救助人負擔訴訟費用時，代繳暫免之費用。
 
-* 103 准予訴訟救助者，暫行免付進行訴訟必要之費用。
+* 103 准予訴訟救助者，暫行免付訴訟費用。
 
-* 104 民事訴訟法第七十九條至第八十五條、第八十七條至第九十五條、第一百零八條、第一百十一條至第一百十三條之規定，於本節準用之。
+> 釋：配合第九十八條之修正，將「進行訴訟必要之費用」修正為「訴訟費用」。
+
+* 104 民事訴訟法第七十九條至第八十五條、第八十七條至第九十四條、第九十五條、第九十六條至第一百零六條、第一百零八條、第一百零九條之一、第一百十一條至第一百十三條之規定，於本節準用之。
+
+> 釋：民事訴訟法修正增訂第九十四條之一，規定訴訟行為須支出費用者，經審判長定期命為預納，而不依命繳納時之法律效果，與本法第一百條第二項規定有所衝突，應不在準用之列，爰刪除準用該條之規定。
 
 * 105 起訴，應以訴狀表明左列各款事項，提出於行政法院為之：一、當事人。二、起訴之聲明。三、訴訟標的及其原因事實。訴狀內宜記載適用程序上有關事項、證據方法及其他準備言詞辯論之事項；其經訴願程序者，並附具決定書。
 
 * 106 撤銷訴訟之提起，應於訴願決定書送達後二個月之不變期間內為之。但訴願人以外之利害關係人知悉在後者，自知悉時起算。撤銷訴訟，自訴願決定書送達後，已逾三年者，不得提起。
 
-* 107 原告之訴，有左列各款情形之一者，行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬行政法院之權限者。二、訴訟事件不屬受訴行政法院管轄而不能請求指定管轄，亦不能為移送訴訟之裁定者。三、原告或被告無當事人能力者。四、原告或被告未由合法之法定代理人、代表人或管理人為訴訟行為者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴逾越法定期限者。七、當事人就已起訴之事件，於訴訟繫屬中更行起訴者。八、本案經終局判決後撤回其訴，復提起同一之訴者。九、訴訟標的為確定判決或和解之效力所及者。十、起訴不合程式或不備其他要件者。撤銷訴訟，原告於訴狀誤列被告機關者，準用第一項之規定。原告之訴，依其所訴之事實，在法律上顯無理由者，行政法院得不經言詞辯論，逕以判決駁回之。
+* 107 原告之訴，有下列各款情形之一者，行政法院應以裁定駁回之。但其情形可以補正者，審判長應定期間先命補正：一、訴訟事件不屬行政訴訟審判之權限者。但本法別有規定者，從其規定。二、訴訟事件不屬受訴行政法院管轄而不能請求指定管轄，亦不能為移送訴訟之裁定者。三、原告或被告無當事人能力者。四、原告或被告未由合法之法定代理人、代表人或管理人為訴訟行為者。五、由訴訟代理人起訴，而其代理權有欠缺者。六、起訴逾越法定期限者。七、當事人就已起訴之事件，於訴訟繫屬中更行起訴者。八、本案經終局判決後撤回其訴，復提起同一之訴者。九、訴訟標的為確定判決或和解之效力所及者。十、起訴不合程式或不備其他要件者。撤銷訴訟，原告於訴狀誤列被告機關者，準用第一項之規定。原告之訴，依其所訴之事實，在法律上顯無理由者，行政法院得不經言詞辯論，逕以判決駁回之。
+
+> 釋：一、為配合公文直式橫書格式，爰將第一項本文「左列」修正為「下列」。二、將第一百零七條第一項第一款作文字修正。另訴訟事件雖不屬行政訴訟審判之權限，如合於第十二條之二之要件者，行政法院應為移送，不得依本項以裁定駁回，爰增訂但書之規定。
 
 * 108 行政法院除依前條規定駁回原告之訴或移送者外，應將訴狀送達於被告。並得命被告以答辯狀陳述意見。撤銷訴訟，原處分及訴願機關經行政法院通知後，應於十日內將卷證送交行政法院。
 
@@ -548,7 +602,9 @@
 
 * 275 再審之訴專屬為判決之原行政法院管轄。對於審級不同之行政法院就同一事件所為之判決提起再審之訴者，由最高行政法院合併管轄之。對於最高行政法院之判決，本於第二百七十三條第一項第九款至第十四款事由聲明不服者，雖有前二項之情形，仍專屬原高等行政法院管轄。
 
-* 276 再審之訴應於三十日之不變期間內提起。前項期間自判決確定時起算。但再審之理由知悉在後者，自知悉時起算。依第二百七十三條第二項提起再審之訴者，第一項期間自解釋公布當日起算。再審之訴自判決確定時起，如已逾五年者，不得提起。但以第二百七十三條第一項第五款、第六款或第十二款情形為再審之理由者，不在此限。
+* 276 再審之訴應於三十日之不變期間內提起。前項期間自判決確定時起算，判決於送達前確定者，自送達時起算；其再審之理由發生或知悉在後者，均自知悉時起算。依第二百七十三條第二項提起再審之訴者，第一項期間自解釋公布當日起算。再審之訴自判決確定時起，如已逾五年者，不得提起。但以第二百七十三條第一項第五款、第六款或第十二款情形為再審之理由者，不在此限。對於再審確定判決不服，復提起再審之訴者，前項所定期間，自原判決確定時起算。但再審之訴有理由者，自該再審判決確定時起算。
+
+> 釋：一、按不得上訴之判決，於宣示或公告後，不待送達，即已確定；得上訴之判決，如得提起上訴之人均於送達前捨棄上訴權或撤回上訴者，其判決亦於送達前確定。此類判決，當事人於判決確定時尚未受送達，難以判斷有無再審理由，又於判決確定後受送達時，是否即屬第二項但書所定「再審之理由知悉在後」之情形，亦易滋疑義。爰參考民事訴訟法第五百條第二項之規定，修正本條第二項，明定其判決於送達前確定者，再審期間自送達時起算。而其再審之理由發生或知悉在後者，則均自知悉時起算，以期明確。二、第五項新增。三、再審之目的，固在匡正確定終局判決之不當，以保障當事人之權益。惟確定判決之安定性亦應兼顧，故於判決確定後經過五年，除有特定之再審原因外，再審之訴即不許提起，此為第四項所明定。惟依此規定，當事人就同一實體法律關係，對於駁回再審之訴之確定判決，又提起再審之訴，如亦自再審判決確定時起算五年之起訴期間，將導致當事人就本質上同一之實體法律關係，於判決確定後，得一再提起再審之訴，而為無謂之爭執，虛耗司法資源，自應予以限制，爰增訂第五項，明定對於再審之訴之確定判決，又提起再審之訴者，其起訴期間應自第一次判決確定時起算。但如再審判決為全部或一部廢棄原確定判決時，則對再審判決提起再審之訴，其起訴期間，應自該再審判決確定時起算。
 
 * 277 再審之訴，應以訴狀表明左列各款事項，並添具確定終局判決繕本，提出於管轄行政法院為之：一、當事人。二、聲明不服之判決及提起再審之訴之陳述。三、應於如何程度廢棄原判決及就本案如何判決之聲明。四、再審理由及關於再審理由並遵守不變期間之證據。再審訴狀內，宜記載準備本案言詞辯論之事項。
 
