--- a/行政-內政/著作權法.md
+++ b/行政-內政/著作權法.md
@@ -268,9 +268,9 @@
 
 * 86 著作人死亡後，除其遺囑另有指定外，下列之人，依順序對於違反第十八條或有違反之虞者，得依第八十四條及前條第二項規定，請求救濟：一、配偶。二、子女。三、父母。四、孫子女。五、兄弟姊妹。六、祖父母。
 
-* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害製版權之物而散布或意圖散布而公開陳列或持有者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、以侵害電腦程式著作財產權之重製物作為營業之使用者。六、明知為侵害著作財產權之物而以移轉所有權或出租以外之方式散布者，或明知為侵害著作財產權之物，意圖散布而公開陳列或持有者。
+* 87 有下列情形之一者，除本法另有規定外，視為侵害著作權或製版權：一、以侵害著作人名譽之方法利用其著作者。二、明知為侵害製版權之物而散布或意圖散布而公開陳列或持有者。三、輸入未經著作財產權人或製版權人授權重製之重製物或製版物者。四、未經著作財產權人同意而輸入著作原件或其重製物者。五、以侵害電腦程式著作財產權之重製物作為營業之使用者。六、明知為侵害著作財產權之物而以移轉所有權或出租以外之方式散布者，或明知為侵害著作財產權之物，意圖散布而公開陳列或持有者。七、未經著作財產權人同意或授權，意圖供公眾透過網路公開傳輸或重製他人著作，侵害著作財產權，對公眾提供可公開傳輸或重製著作之電腦程式或其他技術，而受有利益者。前項第七款之行為人，採取廣告或其他積極措施，教唆、誘使、煽惑、說服公眾利用電腦程式或其他技術侵害著作財產權者，為具備該款之意圖。
 
-> 釋：照黨團協商條文通過。
+> 釋：一、部分不肖網路平台業者，以免費提供電腦下載程式為號召，並藉口收取手續與網路維修費等營利行為，在網路上直接媒合下載與上傳著作權人之文字與影音著作，卻不願支付權利金給著作權人，嚴重侵害著作權人之合法權益，及故意陷付費良善下載者於民、刑法之追訴恐懼中，上述行為至為不當，有必要明確修法來規範不肖平台業者的行為。二、按著作權立法一方面必須保護著作權人，使其有足夠誘因繼續創作，另方面必須確保科技創新不致因著作權保護而受壓抑，二者必須求其平衡，是以本條第一項增訂第七款。對於未經著作財產權人之授權或同意，意圖供公眾透過網路公開傳輸或重製他人著作，侵害著作財產權，對公眾提供可公開傳輸或重製著作之電腦程式或其他技術，亦視為侵害著作權之行為。三、本質上是對於技術提供者於符合相關要件時，課與其對技術之使用者之著作財產權侵害行為負擔法律責任。對於本條增訂第七款及第二項之規定說明如下：(一)本款對於技術之提供者賦予法律責任，故本條非難之行為為「提供行為」。至於技術提供者對於使用者之後續著作權侵害行為，在民事上是否成立「共同不法侵害」、「造意」或「幫助」：刑事上是否另成「共犯」、「教唆犯」或「幫助犯」，另行判斷。(二)技術提供者必須是出於供他人侵害著作財產權之意圖，提供技術，始屬本款所規範之範圍。又意圖係行為人內心主觀之狀態，難以判斷，有必要加以補充解釋，故規定如行為人客觀上採取廣告或其他積極措施，教唆、誘使、煽惑公眾利用該技術侵害著作財產權時，即為具備「供公眾透過網路公開傳輸或重製他人著作，侵害著作財產權」之意圖。
 
 * 87.1 有下列情形之一者，前條第四款之規定，不適用之：一、為供中央或地方機關之利用而輸入。但為供學校或其他教育機構之利用而輸入或非以保存資料之目的而輸入視聽著作原件或其重製物者，不在此限。二、為供非營利之學術、教育或宗教機構保存資料之目的而輸入視聽著作原件或一定數量重製物，或為其圖書館借閱或保存資料之目的而輸入視聽著作以外之其他著作原件或一定數量重製物，並應依第四十八條規定利用之。三、為供輸入者個人非散布之利用或屬入境人員行李之一部分而輸入著作原件或一定數量重製物者。四、附含於貨物、機器或設備之著作原件或其重製物，隨同貨物、機器或設備之合法輸入而輸入者，該著作原件或其重製物於使用或操作貨物、機器或設備時不得重製。五、附屬於貨物、機器或設備之說明書或操作手冊，隨同貨物、機器或設備之合法輸入而輸入者。但以說明書或操作手冊為主要輸入者，不在此限。前項第二款及第三款之一定數量，由主管機關另定之。
 
@@ -308,7 +308,7 @@
 
 > 釋：照黨團協商條文通過。
 
-* 93 有下列情形之一者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條第一款、第三款、第五款或第六款方法之一侵害他人之著作權者。但第九十一條之一第二項及第三項規定情形，不包括在內。
+* 93 有下列情形之一者，處二年以下有期徒刑、拘役，或科或併科新臺幣五十萬元以下罰金：一、侵害第十五條至第十七條規定之著作人格權者。二、違反第七十條規定者。三、以第八十七條第一項第一款、第三款、第五款或第六款方法之一侵害他人之著作權者。但第九十一條之一第二項及第三項規定情形，不在此限。四、違反第八十七條第一項第七款規定者。
 
 > 釋：照黨團協商條文通過。
 
@@ -331,6 +331,10 @@
 > 釋：一、本條新增。二、按侵害著作權以獲得經濟利得為主要目的，為有效遏止侵害行為，應以經濟手段打擊經濟犯罪，爰規定其犯罪所得利益超過本章罰金刑之最多額時，法院得於所得利益之範圍內酌量加重。
 
 * 97 （刪除）
+
+* 97.1 事業以公開傳輸之方法，犯第九十一條、第九十二條及第九十三條第四款之罪，經法院判決有罪者，應即停止其行為；如不停止，且經主管機關邀集專家學者及相關業者認定侵害情節重大，嚴重影響著作財產權人權益者，主管機關應限期一個月內改正，屆期不改正者，得命令停業或勒令歇業。
+
+> 釋：照黨團協商條文通過。
 
 * 98 犯第九十一條至第九十三條、第九十五條至第九十六條之一之罪，供犯罪所用或因犯罪所得之物，得沒收之。但犯第九十一條第三項及第九十一條之一第三項之罪者，其得沒收之物，不以屬於犯人者為限。
 
